--- a/locale/messages_de.properties
+++ b/locale/messages_de.properties
@@ -13,6 +13,7 @@ Button.scrape=Scrape
 Button.edit=Bearbeiten
 Button.register=Registrieren
 Button.rename=Umbenennen
+Button.chooseplayer=Wähle Videoplayer
 
 menuitem.cut=Ausschneiden
 menuitem.copy=Kopieren
@@ -62,17 +63,31 @@ tmm.update.title=Überprüfe auf neue Version
 tmm.update.message=EIne neue Version wurde gefunden.\nMöchtest Du sie installieren?
 tmm.registeredto=Registirert für\:
 tmm.registerdonator=Registriere Dich als Spender
-tmm.registerdonator.error=Es gab ein Problem bei der Registrierung Deiner Version
+tmm.registerdonator.error=Es gab ein Poblem bei der Registrierung Deiner Version.\nBis Deine Spende in unserem System aufscheint, kann es uA ein paar Minuten dauern. Bitte probiere es später noch einmal.
 tmm.registerdonator.success=Danke für die Registrierung als Spender. Bitte TMM neu starten.
-tmm.registerdonator.hint=Hier kannst Du Dich für die "ich-habe-gespendet" Version registrieren. Die Spenden-Version schaltet zusätzlich Funktionalitäten frei, als "danke schön" für unsere Unterstützer. Bitte gib Deinen Namen und eMail Adresse an, die Du auch zum Spenden verwendet hast.
+tmm.registerdonator.hint=Hier kannst Du DIch für die "Donator" Version registrieren. Die Donator Version schaltet zusätzlich Funktionalitäten frei, als "Danke schön" für unsere Unterstützer. \n\nBitte gib Deinen Namen und eMail Adresse an, die Du auch zum Spenden verwendet hast.
 tmm.registerdonator.thanks=Du hast Dich bereits für die Spenden-Version registriert. Vielen Dank für die erneute Spende\!
-tmm.donatorfunction.hint=Diese Funktionalität ist exklusiv für unsere Unterstützer, die TMM etwas gespendet haben.
+tmm.donatorfunction.hint=Diese Funktion ist unseren Spendern vorbehalten
+tmm.help=Hilfe
+tmm.faq=häufig gestellte Fragen
+tmm.forum=Finde Hilfe im tinyMediaManager Forum
+tmm.queued=eingereiht
+tmm.unknowntitle=unbekannter Titel
+tmm.problemdetected=Problem gefunden
+tmm.uicrash=Whoops. Etwas unvorhergesehenes ist passiert.\nBitte starte TMM neu und probiere es nochmal.\nWenn es wieder auftritt, würden wir uns auf einen Bugreport freuen.
 
-status.activethreads=laufende Aufgaben
-status.queuesize=Warteschlange\:
+status.activethreads=Laufende Threads - klicke für Details
+task.running=Läuft...
+task.queued=Wartend...
+task.cancelled=Abgebrochen...
+task.finished=Fertig...
+task.imagedownloads=Bilder herunterladen
+task.download=Datei herunterladen
+task.othertasks=Führe Hintergrund Task aus
+task.remaining=Aufgaben verbleibend
 
 # menu & popup on rightclick
-onlyoneoperation=Nur eine Funktion zur gleichen Zeit darf ausgeführt werden
+onlyoneoperation=Nur eine Funktion zur gleichen Zeit darf ausgeführt werden. Der Task wird eingereiht.
 update.datasource=Filmverzeichnis neu einlesen
 update.datasource.unavailable=Datenordner {} nicht verfügbar - überspringe
 update.datasource.movieinroot=Datei '{}' liegt in einem Verzeichnis mit mehreren Filmen. Um diesen Film zu importieren, bitte die 'erlaube mehrere Filme in einem Verzeichnis' Funktion einschalten (lese den Hinweis sorgfältig\!)
@@ -81,8 +96,12 @@ export.detail=Vorlage beinhaltet Film Detailseiten
 export.setdestination=Verzeichnis auswählen
 export.selectdirectory=Wähle Verzeichnis für den Export
 
+update.cleanup=Datenbank bereinigen
+update.mediainfo=hole MediaInfo
+
 edit.discard=Änderungen verwerfen
 
+movie.scraping=Filme scrapen
 movie.scrape.selected=Suchen & Scrapen aller ausgewählten Filme
 movie.scrape.selected.force=Automatisch Suchen & Scrapen aller ausgewählten Filme - nimm besten Treffer
 movie.scrape.selected.force.desc=Automatisch Suchen & Scrapen aller ausgewählten Filme - nimm besten Treffer
@@ -92,11 +111,14 @@ movie.scrape.metadata=Metadaten von ausgewählten Filmen scrapen
 movie.scrape.metadata.desc=Metadaten von ausgewählten Filmen scrapen
 movie.scrape.nomatchfound=Kein entsprechender Film bei der Suche gefunden
 movie.scrape.toosimilar=Titel unterscheiden sich zuwenig - kann nicht entscheiden welchen zu nehmen.
-movie.scrape.toolowscore=Suchergebnisbewertung war zu niedrig (<0.75), nehme Ergebnis nicht her.
-movie.remove=Ausgewählte Filme entfernen
+movie.scrape.toolowscore=Suchergebnisbewertung war zu niedrig (<{}), nehme Ergebnis nicht her.
+movie.remove=Ausgewählte Filme entfernen (DB)
+movie.delete=Ausgewählte Filme entfernen (DB + Datei)
+movie.delete.hint=Ausgewählte Filme aus der tinyMediaManager Datenbank und von Deinem Dateisystem(\!) entfernen
+movie.delete.desc=Ausgewählte Filme aus der DB und vom Filesystem löschen? Die Dateien werden zuerst in ein Verzeichnis ".deletedByTMM" verschoben und erst beim Beenden gelöscht.
 movie.rename=Umbenennen / Cleanup ausgewählter Filme
 movie.renamepreview=Umbenennen / Cleanup ausgewählter Filme - Vorschau
-movie.renamepreview.hint=Erzeugt eine Vorschau, wie die umbenannten Filme aussehen.
+movie.renamepreview.hint=<html>Zeigt eine Vorschau, welche Filme noch umbenannt werden sollten<br />Diese Funktion ist unseren Spendern vorbehalten</html>
 movie.renamerpreview=Umbenennen / Cleanup Vorschau
 movie.updatemediainfo=Medianinformationen aus ausgewählten Filmen neu einlesen
 movie.bulkedit=Mehrfach bearbeiten
@@ -105,6 +127,13 @@ movie.rewritenfo=NFO für ausgewählte Filme neu schreiben
 movie.clearimagecache=Den Bildercache für ausgewählte Filme löschen
 movie.findmissing.all=Finde fehlende Filme in allen Datenordnern.
 movie.findmissing=Finde fehlende Filme
+movie.assignmovieset=Finde Filmsets für ausgewählte Filme
+movie.assignmovieset.desc=<html>Weise selektierte Filme ihrem Filmset zu<br />Diese Funktion ist unseren Spendern vorbehalten</html>
+movie.setwatchedflag=Markiere ausgewählte Film(e) als "gesehen"
+movie.synctrakt=Film Bibliothek mit Trakt.tv synchronisieren
+movie.synctrakt.desc=Film Bibliothek mit Trakt.tv synchronisieren
+movie.synctraktwatched="Gesehen"-Status mit Trakt.tv synchronisieren
+movie.synctraktwatched.desc="Gesehen"-Status mit Trakt.tv synchronisieren
 
 movie.export=Exportiere Filmliste(n) von selektierten Filmen
 
@@ -163,6 +192,10 @@ image.choose.fanart=Wähle Fanart
 image.choose.poster=Wähle Poster
 image.choose.banner=Wähle ein Banner
 image.choose.season=Wähle Saison Poster
+image.choose.logo=Wähle Logo
+image.choose.clearart=Wähle Clearart
+image.choose.thumb=Wähle Thumb
+image.choose.disc=Wähle Diskart
 image.extrathumbs.markall=Wähle alle Extrathumbs
 image.extrathumbs.unmarkall=Entferne die Auswahl der Extrathumbs
 image.extrafanart.markall=Wähle alle Extratfanarts
@@ -170,8 +203,11 @@ image.extrafanart.unmarkall=Entferne die Auswahl der Extratfanarts
 image.nonefound=kein Bild gefunden
 image.noneselected=kein Bild selektiert\!
 image.seteselected=Setze selektiertes Bild
+image.download=lade Bilde herunter
+image.download.failed=Konnte Bild nicht herunterladen
 image.download.noid=Keine ID (imdbId oder tmdbId) zum Suchen verfügbar
 image.download.progress=lade Bilder herunter
+image.download.nothingfound=keine Bilder gefunden
 image.poster.size=Poster Größe
 image.poster.naming=Poster Namenskonvention
 image.fanart.size=Fanart Größe
@@ -180,6 +216,10 @@ image.notfound.fanart=kein Fanart gefunden
 image.notfound.poster=kein Poster gefunden
 image.notfound.banner=kein Banner gefunden
 image.notfound.thumb=kein Thumb gefunden
+image.notfound.logo=Kein Logo gefunden
+image.notfound.clearart=Kein Clearart gefunden
+image.notfound.disc=Kein Diskart gefunden
+image.showoriginal=Zeige original BIld
 
 genre.add=Genre hinzufügen
 genre.remove=Genre entfernen
@@ -222,7 +262,10 @@ Settings.images=Bilder
 Settings.tvshow=TV Shows
 Settings.general=Allgemein
 Settings.externaldevices=Externe Geräte
+Settings.externalservices=Externe Dienste
 Settings.filetypes=Dateitypen
+Settings.trakttv=Trakt.tv
+Settings.trakttv.apikey=Trakt.tv API Schlüssel
 
 # general settings
 Settings.proxy=Proxy Einstellungen
@@ -238,6 +281,19 @@ Settings.imagecachebackground=Bildercache automatisch im Hintergrund aufbauen
 Settings.loglevel=Loglevel
 Settings.language=UI Sprache
 Settings.languagehint=Die Sprache wird bei beim nächsten Start geändert
+Settings.shownotifications=zeige Benachrichtigungen
+Settings.mediaplayer.hint=Wähle einen Videoplayer, welcher für die Wiedergabe verwendet werden soll.\n(Wenn keiner angegeben, wird der Standardplayer verwendet)
+Settings.fonts.hint=DIe Standardschrift in tinyMediaManager ist "Dialog" Größe 12.\nÄnderungen an der Schriftart/größe können das Design leicht verschieben (die Funktionalität wird aber nicht beeinträchtigt)
+Settings.fontfamily=Schriftart
+Settings.fontsize=Schriftgröße
+Settings.fontchangehint=Die Schriftart wird beim nächsten Start geändert
+Settings.ui=UI Einstellungen
+Settings.deletetrash=temporäres Backup-Verzeichnis beim Beenden löschen
+Settings.trakt=Automatisch mit Trakt.tv synchronisieren
+Settings.trakt.clearmovies=Entferne alle Filme aus Trakt.tv
+Settings.trakt.clearmovies.hint=ACHTUNG\: Es werden alle Filme und 'gesehen' Status aus Deinem online Trakt.tv Profil entfernt. Weitermachen?
+Settings.trakt.cleartvshows=Entferne alle TvShows aus Trakt.tv
+Settings.trakt.cleartvshows.hint=ACHTUNG\: Es werden alle TvShows und 'gesehen' Status aus Deinem online Trakt.tv Profil entfernt. Weitermachen?
 
 # image settings
 Settings.poster=Poster und Fanart
@@ -247,6 +303,7 @@ Settings.fanarttv.alert=Achtung\: Fanart.tv unterstützt keine Film Poster\!
 Settings.moviefilename=<Film Dateiname>
 Settings.tbn.deprecation=.tbn is ein altes Format und wird nicht mehr unterstützt.
 Settings.naming.info=Hinweis\: Die Dateierweiterung der Bilder (.JPG oder .PNG) hängt vom Quellformat der Datei ab.
+Settings.extraartwork=zusätzliche Artworks aktivieren
 Settings.enable.extrathumbs=Extrathumbs aktivieren
 Settings.resize.extrathumbs=Extrathumbs auf folgende Breite skalieren
 Settings.enable.extrafanart=Extrafanart aktivieren
@@ -306,8 +363,11 @@ Settings.macaddress=MAC Adresse
 Settings.movie.badwords=Wortfilter
 Settings.movie.badwords.hint=Wörter, welche von dem Dateinamen / \nerkannten Titel entfernt werden.
 Settings.runtimefrommediafile=Video Laufzeit von MediaInfo vorziehen
+Settings.trailer.preferred=Nimm bevorzugte Trailer Einstellungen
+Settings.trailer.source=Trailer Quelle
+Settings.trailer.quality=Trailer Qualität
 
-Settings.movie.renamer.info=Verfügbare Werte\:\n$T \= Titel\n$O \= Original Titel\n$1 \= Erster Buchstabe des Titels\n$E \= Titel sortiert\n$2 \= Erster Buchstabe des sortierten Titels\n$Y \= Jahr\n$M \= Filmset Titel (sortiert)\n$N \= Filmset Titel\n$I \= IMDB Nummer\n$C \= Altersbeschränkung\n$R \= Video Auflösung\n$A \= Audio Codec + Kanäle\n$V \= Video Codec + Format\n$F \= Video Format\n\n{} \= optionales Ersetzen\nzB\: {Jahr $Y} -> "Jahr 2013" wenn Y$ nicht leer ist.\nWenn Y$ leer ist (oder keine $x Variable dazwischen)\ndann ist der komplette {} Tag leer.
+Settings.movie.renamer.info=Verfügbare Werte\: \n$T \= Titel\n$O \= Original Titel \n$1 \= Erster Buchstabe des Titels\n$E \= Titel sortiert\n$2 \= Erster Buchstabe des sortierten Titels\n$Y \= Jahr\n$M \= Filmset Titel (sortiert)\n$N \= Filmset Titel\n$I \= IMDB Nummer\n$C \= Altersbeschränkung\n$R \= Video Auflösung\n$A \= Audio Codec + Kanäle\n$V \= Video Codec + Format\n$F \= Video Format\n$S \= Medien Source (DVD, BD, ...)\n$3 \= 3D Kennung (3D SBS/TAB)\n\n{} \= optionales Ersetzen\nzB\: {Jahr $Y} -> "Jahr 2013" wenn Y$ nicht leer ist.\nWenn Y$ leer ist (oder keine $x Variable dazwischen) dann ist der komplette {} Tag leer.
 Settings.movie.renamer.example=Wähle die Namensvorlage für Dateien und Ordner.\nWenn leer, wird das Umbenennen übersprungen.
 Settings.movie.renamer.nomovie=brauche wenigstens einen (gescrapten) Film für die Vorschau
 Settings.movie.renamer.spacesubstitution=Leerzeichen ersetzen durch
@@ -323,11 +383,14 @@ Settings.tvshowseasontofilename=Saisonnummer dem Dateinamen hinzufügen
 Settings.tvshowtofilename=TvShow Name dem Dateinamen hinzufügen
 Settings.tvshowepisodetofilename=Episodentitle dem Dateinamen hinzufügen
 Settings.tvshowseasonfoldername=Saison Ordnername
-Settings.tvshowseasonhint=$1 - Saison Nummer\n$2 - Saison Nummer mit 2 Stellen
+Settings.tvshowseasonhint=$1 - Saison Nummer\n$2 - Saison Nummer mit mindestens 2 Stellen\nDu kannst das Erstellen des Saison Ordners verhindern, wenn dieses Feld leer bleibt (nicht empfohlen)\nDu musst allerdings *zwingend* "Saisonnummer dem Dateinamen hinzufügen" aktivieren\!
 Settings.separator=Trennzeichen
+Settings.separator.hint=Trennzeichen zwischen Saison und Episode Nummer
+Settings.tvshowspacereplacement.hint=Leerzeichen im Titel ersetzen durch
 Settings.tvshow.certifactioncountry.hint=Hinweis\: Momentan unterstützt kein Scraper anderssprachige Altersbeschränkungen.\nTVDB führt nur US Altersbeschränkungen,\nund AniDB gar keine.
 
 # tv shows
+tvshow.scraping=TvShow scrapen
 tvshow.scrape.newitems=Neu gefundene Dateien scrapen
 tvshow.scrape.selected=Suchen & Scrapen aller ausgewählten TV Shows
 tvshow.scrape.selected.force=Suchen und Scrapen von ausgewählten TV Shows - automatisch besten Treffer nehmen
@@ -336,6 +399,9 @@ tvshow.scrape.nomatchfound=Keine entsprechende TV show bei der Suche gefunden
 tvshow.edit=Ausgewählte TV Show(s)/Episode(s) bearbeiten
 tvshow.edit.abortqueue.desc=Breche Bearbeitung aller selektierten TV Shows ab
 tvshow.remove=Ausgewählte TV Show(s) / Episoden entfernen
+tvshow.delete=Ausgewählte TV Show(s) / Episoden löschen (DB)
+tvshow.delete.hint=Ausgewählte TV Show(s) / Episoden löschen (DB + Dateien)
+tvshow.delete.desc=Ausgewählte TV Shows aus der DB und vom Filesystem löschen?\nDie Dateien werden zuerst in ein Verzeichnis ".deletedByTMM" verschoben und erst beim Beenden gelöscht.
 tvshow.changeseasonposter=Ändere Saison Poster von ausgewählten Saison(en)
 tvshow.change=Wechsle TV Show
 tvshow.bulkedit=Mehrfach bearbeiten
@@ -348,12 +414,28 @@ tvshow.clearimagecache=Den Bildercache für ausgewählte Serien/Episoden lösche
 tvshow.renamer.failedrename=Konnte Episode {} nicht umbenennen. Ungültige Saison- und/oder Episodennummer.
 tvshow.renamer.tvshowfolder=TV Show Ordner umbenennen
 tvshow.renamer.tvshowfolder.year=Das Jahr zum Ordnername hinzufügen
+tvshow.updatemediainfo=Medianinformationen aus ausgewählten TvShow(s)/Episoden neu einlesen
+tvshow.export=ausgewählte TV Show(s) exportieren
+tvshow.synctrakt=TV Show Bibliothek mit Trakt.tv synchronisieren
+tvshow.synctrakt.desc=TV Show Bibliothek mit Trakt.tv synchronisieren
+tvshow.synctraktwatched="Gesehen"-Status mit Trakt.tv synchronisieren
+tvshow.synctraktwatched.desc="Gesehen"-Status mit Trakt.tv synchronisieren
 
 tvshowepisode.scrape=Scrape Episoden Metadaten
 tvshowepisode.clone=Episode kopieren
 tvshowepisode.remove=Episode entfernen
 tvshowepisode.rewritenfo=NFO für ausgewählte Episode(n) neu schreiben
 tvshowepisode.choose=Episode auswählen
+tvshowepisode.setwatchedflag=Markiere ausgewählte Episode(n) als "gesehen"
+
+trakt.sync=Synchronisiere mit Trakt.tv
+trakt.sync.movie=Filmbibliothek mit Trakt.tv synchronisieren
+trakt.sync.moviewatched="Gesehen" Status der Filme mit Trakt.tv synchronisieren
+trakt.sync.tvshow=TV Bibliothek mit Trakt.tv synchronisieren
+trakt.sync.tvshowwatched="Gesehen" Status der TV Bibliothek mit Trakt.tv synchronisieren
+trakt.clear=Lösche Trakt.tv Daten
+trakt.clear.movies=Lösche Trakt.tv Film(e)
+trakt.clear.tvshows=Lösche Trakt.tv TvShow(s)
 
 # metatags
 metatag.actors=Schauspieler
@@ -374,6 +456,7 @@ metatag.director=Regie
 metatag.episode=Episode
 metatag.episodes=Episoden
 metatag.external=Extern
+metatag.extraartwork=Extra Artwork
 metatag.filename=Dateiname
 metatag.files=Dateien
 metatag.format=Format
@@ -440,9 +523,13 @@ mediafiletype.nfo=Info
 mediafiletype.poster=Poster
 mediafiletype.fanart=Fanart
 mediafiletype.banner=Banner
+mediafiletype.clearart=Clearart
+mediafiletype.logo=Logo
+mediafiletype.discart=Diskart
 mediafiletype.thumb=Thumb
 mediafiletype.trailer=Trailer
 mediafiletype.extrafanart=Extrafanart
+mediafiletype.extrathumb=Extrathumb
 mediafiletype.graphic=Grafik
 mediafiletype.movie=Film
 mediafiletype.episode=Episode
@@ -505,6 +592,7 @@ message.update.errormoviedir=Fehler beim Auslesen des Filmverzeichnisses {} {}
 
 message.database.loadmovies=Konnte keine Filme aus der DB laden
 message.database.loadtvshows=Konnte keine TV-Shows aus der DB laden
+message.database.corrupteddata=Es wurden fehlerhafte Daten gefunden und von der Datenbank entfernt. Bitte ein Datenupdate durchführen\!
 
 message.config.loadsettingserror=Fehler beim Laden der Einstellungen {} {}
 message.config.savesettingserror=Fehler beim Speichern der Einstellungen {} {}
