--- a/locale/messages_it.properties
+++ b/locale/messages_it.properties
@@ -13,6 +13,7 @@ Button.scrape=Raschia
 Button.edit=Modifica
 # Button.register=Register
 # Button.rename=Rename
+# Button.chooseplayer=Choose player
 
 menuitem.cut=Taglia
 menuitem.copy=Copia
@@ -28,9 +29,9 @@ tmm.tvshow=Serie TV
 tmm.settings=Impostazioni
 
 # menu actions
-tmm.exit=Esci
+# tmm.exit=Quit
 tmm.exit.runningtasks=Serie Tv fonte dati
-tmm.exit.confirmation=Conferma uscita
+# tmm.exit.confirmation=Quit confirmation
 tmm.cache=Cache
 tmm.clearurlcache=pulisci la cache url
 tmm.clearimagecache=pulisci la cache immagine
@@ -62,17 +63,31 @@ tmm.wakeonlandevice=Dispositivo Risveglio da Rete
 # tmm.update.message=A new update has been found.\nDo you want to update?
 # tmm.registeredto=Registered to\:
 # tmm.registerdonator=Register for donator version
-# tmm.registerdonator.error=There was a problem registering your version
+# tmm.registerdonator.error=There was a problem registering your version.\nRegistering your donation in our system may take a while. Please try again in a few minutes.
 # tmm.registerdonator.success=Thank you for registering to the donator version. Please restart tMM.
-# tmm.registerdonator.hint=Here you can register to the donator version. The donator version will have some special features as a "thank you" for our supporters. Please fill in the name and email address you used when donating.
+# tmm.registerdonator.hint=Here you can register to the donator version. The donator version will have some special features as a "thank you" for our supporters.\n\nPlease fill in the name and email address you used when donating.
 # tmm.registerdonator.thanks=You have already registered to the donator version. Thank you again for donating\!
-# tmm.donatorfunction.hint=This feature is restricted to our donators.
+# tmm.donatorfunction.hint=This feature is restricted to our donators
+# tmm.help=Help
+# tmm.faq=Frequently asked questions
+# tmm.forum=Find help in the tinyMediaManager forum
+# tmm.queued=queued
+# tmm.unknowntitle=Unknown title
+# tmm.problemdetected=Problem detected
+# tmm.uicrash=Whoops. Something unforeseen has happened.\nPlease restart TMM and try again.\nIf it happens again, we would kindly ask you to submit a bugreport.
 
-status.activethreads=processi attivi
-status.queuesize=Coda\:
+# status.activethreads=There are active threads - click for details
+# task.running=Working..
+# task.queued=Waiting..
+# task.cancelled=Cancelled..
+# task.finished=Finished..
+# task.imagedownloads=Downloading images
+# task.download=File download
+# task.othertasks=Performing background tasks
+# task.remaining=tasks remaining
 
 # menu & popup on rightclick
-onlyoneoperation=E' permessa una sola operazione alla volta
+# onlyoneoperation=Only one operation at one time is allowed. The task will be queued
 update.datasource=Aggiorna fonti data
 update.datasource.unavailable=Fonte dati {} non disponibile - salta
 update.datasource.movieinroot=Trovato il file '{}' in una cartella contenente più di un film. Per ottenere l'importazione, attivare la funzione 'Consenti più Film per cartella' nelle impostazioni Film (leggere attentamente\!)
@@ -81,8 +96,12 @@ export.detail=Il modello contiene dettagli delle pagine
 export.setdestination=Imposta la destinazione per l'esportazione
 export.selectdirectory=Seleziona la cartella per l'esportazione
 
+# update.cleanup=Cleanup database
+# update.mediainfo=getting Mediainfo
+
 edit.discard=Scarta i cambiamenti
 
+# movie.scraping=Scraping movies
 movie.scrape.selected=Cerca & raschia i Film selezionati
 movie.scrape.selected.force=Cerca & raschia i Film selezionati - per risultati migliori
 movie.scrape.selected.force.desc=Cerca & raschia i Film selezionati senza iterazione con l'utente; forza i risultati migliori
@@ -92,11 +111,14 @@ movie.scrape.metadata=Raschia metadata per i film selezionati
 movie.scrape.metadata.desc=Raschia metadata per i film selezionati
 movie.scrape.nomatchfound=Nessun Film adatto trovato durante la rucerca
 movie.scrape.toosimilar=I titoli dei Film sono troppo simili - non so decidere quale usare
-movie.scrape.toolowscore=La corrispondenza era troppo bassa (<0,75) e quindi non prendiamo questo risultato
-movie.remove=Rimuovi i Film selezionati
+# movie.scrape.toolowscore=Matching score was too low (<{}) so we are not taking this result
+# movie.remove=Remove selected movie(s) (DB)
+# movie.delete=Delete selected movie(s) (DB + file)
+# movie.delete.hint=Delete selected movie(s) from tinyMediaManager DB and your data source\!
+# movie.delete.desc=Delete selected movie(s) from tinyMediaManager DB and the data source?\nThe files will be temporary moved to a folder called .deletedByTMM inside the data source and deleted on exit of tinyMediaManager
 movie.rename=Rinomina/pulisci i Film selezionati
 # movie.renamepreview=Rename/cleanup selected movie(s) - dry run
-# movie.renamepreview.hint=Create a preview, which movies have to be renamed
+# movie.renamepreview.hint=<html>Create a preview, which movies have to be renamed<br />This feature is restricted to our donators</html>
 # movie.renamerpreview=Renamer preview
 movie.updatemediainfo=Aggiorna le informazioni per i Film Selezionati
 movie.bulkedit=Modifica massiva
@@ -105,6 +127,13 @@ movie.rewritenfo=Riscrivi NFO per il Film selezionato
 movie.clearimagecache=Pulisci la cache immagine per il Film selezionato
 # movie.findmissing.all=Find missing movies in all datasources
 # movie.findmissing=Find missing movies
+# movie.assignmovieset=Find movie sets for selected movie(s)
+# movie.assignmovieset.desc=<html>Assign selected movie(s) to their movie sets<br />This feature is restricted to our donators</html>
+# movie.setwatchedflag=Set the watched flag for selected movie(s)
+# movie.synctrakt=Synchronize the movie collection with Trakt.tv
+# movie.synctrakt.desc=Synchronize the movie collection with Trakt.tv
+# movie.synctraktwatched=Synchronize the watched state with Trakt.tv
+# movie.synctraktwatched.desc=Synchronize the watched state with Trakt.tv
 
 movie.export=Esporta i Film selezionati
 
@@ -163,6 +192,10 @@ image.choose.fanart=Scegli una fanart
 image.choose.poster=Scegli un poster
 image.choose.banner=Scegli striscione
 image.choose.season=Scegli il poster per la stagione
+# image.choose.logo=Choose logo
+# image.choose.clearart=Choose clearart
+# image.choose.thumb=Choose thumb
+# image.choose.disc=Choose disc art
 image.extrathumbs.markall=Segna tutte le icone extra
 image.extrathumbs.unmarkall=Deseleziona tutte le icone extra
 image.extrafanart.markall=Segna tutte le extra fanart
@@ -170,8 +203,11 @@ image.extrafanart.unmarkall=Deseleziona tutte le extra fanart
 image.nonefound=nessuna immagine trovata
 image.noneselected=nessuna immagine selezionata
 image.seteselected=Imposta l'immagine selezionata
+# image.download=Downloading image
+# image.download.failed=Could not download image
 image.download.noid=Nessun ID (imdbId or tmdbId) per le ricerche disponibili
 image.download.progress=Scaricamento immagini
+# image.download.nothingfound=No images found
 image.poster.size=Dimensione del poster
 image.poster.naming=Nome del file del poster
 image.fanart.size=Dimensione fanart
@@ -180,6 +216,10 @@ image.notfound.fanart=Nessuna fanart trovata
 image.notfound.poster=Nessun poster trovato
 image.notfound.banner=Nessuno striscione trovato
 image.notfound.thumb=Nessuna icona trovata
+# image.notfound.logo=No logo found
+# image.notfound.clearart=No clearart found
+# image.notfound.disc=No disc art found
+# image.showoriginal=Show original image
 
 genre.add=Aggiungi genere
 genre.remove=Rimuovi genere
@@ -222,7 +262,10 @@ Settings.movies=Film
 # Settings.tvshow=TV Shows
 Settings.general=Generale
 # Settings.externaldevices=External devices
+# Settings.externalservices=External services
 # Settings.filetypes=File types
+# Settings.trakttv=Trakt.tv
+# Settings.trakttv.apikey=Trakt.tv API key
 
 # general settings
 Settings.proxy=Impostazione proxy
@@ -238,6 +281,19 @@ Settings.imagecachebackground=Crea automaticamente la cache dell'immagine in bac
 Settings.loglevel=Livello fi Log
 Settings.language=Lingua Interfaccia Utente
 Settings.languagehint=La lingua cambierà al riavvio\!
+# Settings.shownotifications=Show notifications
+# Settings.mediaplayer.hint=Specify a media player which will be used for playback\r\n(if no one is chosen, the default player will be taken)
+# Settings.fonts.hint=tinyMediaManager has been created with the font "Dialog" size 12.\r\nChanging the font and/or size can cause visual glitches (but not break functionality\!)
+# Settings.fontfamily=Font family
+# Settings.fontsize=Font size
+# Settings.fontchangehint=The font will be changed after restart\!
+# Settings.ui=UI settings
+# Settings.deletetrash=Delete trash/backup folder on exit
+# Settings.trakt=Automatic sync with Trakt.tv
+# Settings.trakt.clearmovies=Remove movies from Trakt.tv
+# Settings.trakt.clearmovies.hint=ATTENTION\: This will remove all your movies and watched states from your Trakt.tv profile. Proceed?
+# Settings.trakt.cleartvshows=Remove TV shows from Trakt.tv
+# Settings.trakt.cleartvshows.hint=ATTENTION\: This will remove all your TV shows and watched states from your Trakt.tv profile. Proceed?
 
 # image settings
 Settings.poster=Poster e Fanart
@@ -247,6 +303,7 @@ Settings.fanarttv.alert=Attenzione\: Fanart.tv non fornisce poster
 Settings.moviefilename=<nome del file del film>
 Settings.tbn.deprecation=.tbn è errato e verrà eliminato presto
 Settings.naming.info=Nota\: questa opzione creerà un nome file con estensione .JPG o .PNG in relazione al tipo/formato dell'artwork
+# Settings.extraartwork=Enable extra artwork
 Settings.enable.extrathumbs=Abilita icone extra
 Settings.resize.extrathumbs=Ridimensiona icone extra a (larghezza)
 Settings.enable.extrafanart=Abilita extra fanart
@@ -306,8 +363,11 @@ Settings.macaddress=Indirizzo MAC
 # Settings.movie.badwords=Bad words
 # Settings.movie.badwords.hint=Bad words, which will be removed from\r\nthe detected movie name
 # Settings.runtimefrommediafile=Prefer runtime from MediaInfo
+# Settings.trailer.preferred=Use preferred trailer settings
+# Settings.trailer.source=Trailer source
+# Settings.trailer.quality=Trailer quality
 
-# Settings.movie.renamer.info=Available pattern\:\r\n$T \= Title\r\n$O \= OriginalTitle\r\n$1 \= first letter of the title\r\n$E \= Sort title\r\n$2 \= first letter of sort title\r\n$Y \= Year\r\n$M \= Movieset title (sort title)\r\n$N \= Movieset title\r\n$I \= IMDB number\r\n$C \= Certification\r\n$R \= Video resolution\r\n$A \= audio code + channels\r\n$V \= video code + format\r\n$F \= video format\r\n\r\n{} \= optional replacement\r\n eg\: {Year $Y} -> "Year 2013" if $Y is not empty\r\n if $Y is empty (or no $x replacement inside)\r\n the complete tag is empty
+# Settings.movie.renamer.info=Available pattern\:\r\n$T \= Title\r\n$O \= OriginalTitle\r\n$1 \= first letter of the title\r\n$E \= Sort title\r\n$2 \= first letter of sort title\r\n$Y \= Year\r\n$M \= Movieset title (sort title)\r\n$N \= Movieset title\r\n$I \= IMDB number\r\n$C \= Certification\r\n$R \= Video resolution\r\n$A \= audio code + channels\r\n$V \= video code + format\r\n$F \= video format\r\n$S \= media source (DVD etc)\r\n$3 \= 3D tag (3D SBS/TAB)\r\n\r\n{} \= optional replacement\r\n eg\: {Year $Y} -> "Year 2013" if $Y is not empty\r\n if $Y is empty (or no $x replacement inside)\r\n the complete tag is empty
 # Settings.movie.renamer.example=Choose a folder and file renaming pattern.\nIf fields are empty, the renaming will be skipped\!
 Settings.movie.renamer.nomovie=almeno un Film è necessario per l'esempio
 Settings.movie.renamer.spacesubstitution=Rimpiazza spazi con
@@ -323,11 +383,14 @@ Settings.tvshowseasontofilename=aggiungi stagione al nome del file
 Settings.tvshowtofilename=Aggiungi Serie Tv al nome del file
 Settings.tvshowepisodetofilename=aggiungi il titolo dell'episodio al nome del file
 Settings.tvshowseasonfoldername=nome della cartella della stagione
-# Settings.tvshowseasonhint=$1 - Season number\n$2 - Season number with at least 2 digits
+# Settings.tvshowseasonhint=$1 - Season number\n$2 - Season number with at least 2 digits\nYou can omit creating the season folder by leaving this field blank.\nBut to use this, you have to check \\"add season to filename\\"
 # Settings.separator=Separator
+# Settings.separator.hint=Separator between title and season/episode number
+# Settings.tvshowspacereplacement.hint=Replace spaces in title with this character
 # Settings.tvshow.certifactioncountry.hint=Hint\: at the moment none of the scraper supports certifications from different countries. \r\nThe TV Database will always return US certifications\r\nAniDB does not provide certifications
 
 # tv shows
+# tvshow.scraping=Scraping TV shows
 tvshow.scrape.newitems=Raschia elementi nuovi
 tvshow.scrape.selected=Cerca & raschia le Serie Tv selezionate
 tvshow.scrape.selected.force=Cerca & raschia le Serie Tv selezionate forza miglior risultato
@@ -336,6 +399,9 @@ tvshow.scrape.nomatchfound=Nessuna serie Tv adatta trovata durante la ricerca
 tvshow.edit=Modifica le Serie Tv selezionate
 tvshow.edit.abortqueue.desc=Termina la modifica di tutte le Serie Tv selezionate
 tvshow.remove=Rimuovi Serie Tv/episodi selezinati
+# tvshow.delete=Delete selected TV show(s)/episode(s)
+# tvshow.delete.hint=Delete selected TV show(s)/episode(s) from tinyMediaManager and the data source
+# tvshow.delete.desc=Delete selected TV show(s)/episode(s) from tinyMediaManager and the data source?\nThe files will be temporary moved to a folder called .deletedByTMM inside the data source and deleted on exit of tinyMediaManager
 tvshow.changeseasonposter=Cambia il postere della stagione per le stagioni selezionate
 tvshow.change=Cambia Serie Tv
 tvshow.bulkedit=Modifica massiva
@@ -348,12 +414,28 @@ tvshow.clearimagecache=Pulisci l'immagine cache per la Serie Tv / episodio selez
 tvshow.renamer.failedrename=Ridenominazione episodio fallita  {} - stagione e/o numero dell'episodio non valido
 # tvshow.renamer.tvshowfolder=Rename TV show folder
 # tvshow.renamer.tvshowfolder.year=Add year to the TV show folder
+# tvshow.updatemediainfo=Update media information of selected TV shows(s)/episodes(s)
+# tvshow.export=Export selected TV show(s)
+# tvshow.synctrakt=Synchronize the TV show collection with Trakt.tv
+# tvshow.synctrakt.desc=Synchronize the TV show collection with Trakt.tv
+# tvshow.synctraktwatched=Synchronize the watched state with Trakt.tv
+# tvshow.synctraktwatched.desc=Synchronize the watched state with Trakt.tv
 
 tvshowepisode.scrape=Raschia metadata episodio
 tvshowepisode.clone=Clona episodio
 tvshowepisode.remove=Elimina episodio
 tvshowepisode.rewritenfo=Riscrivi NFO per gli episodi selezionati
 tvshowepisode.choose=Scegli un episodio
+# tvshowepisode.setwatchedflag=Set the watched flag for selected episode(s)
+
+# trakt.sync=Sync Trakt.tv data
+# trakt.sync.movie=Syncing movie collection
+# trakt.sync.moviewatched=Syncing movie watched state
+# trakt.sync.tvshow=Syncing TV show collection
+# trakt.sync.tvshowwatched=Syncing TV show watched state
+# trakt.clear=Clearing Trakt.tv data
+# trakt.clear.movies=Clearing Trakt.tv movie(s)
+# trakt.clear.tvshows=Clearing Trakt.tv TV show(s)
 
 # metatags
 metatag.actors=Attori
@@ -374,6 +456,7 @@ metatag.director=Regista
 metatag.episode=Episodio
 metatag.episodes=Episodi
 metatag.external=esterno
+# metatag.extraartwork=Extra artwork
 metatag.filename=Nome del file
 metatag.files=File
 # metatag.format=Format
@@ -440,9 +523,13 @@ mediafiletype.nfo=NFO
 mediafiletype.poster=Poster
 mediafiletype.fanart=Fanart
 mediafiletype.banner=Striscione
+# mediafiletype.clearart=Clearart
+# mediafiletype.logo=Logo
+# mediafiletype.discart=Disc art
 mediafiletype.thumb=Icona
 mediafiletype.trailer=Triler
 mediafiletype.extrafanart=Extra Fanart
+# mediafiletype.extrathumb=Extrathumb
 mediafiletype.graphic=Grafica
 mediafiletype.movie=Film
 mediafiletype.episode=Episodio
@@ -505,6 +592,7 @@ message.update.errormoviedir=Analisi della cartella Film fallita
 
 message.database.loadmovies=Impossibile caricare filmati dal un database
 message.database.loadtvshows=Impossibili caricare Serie Tv dal database
+# message.database.corrupteddata=Corrupted data has been found and removed from your database. Please update your data sources\!
 
 message.config.loadsettingserror=Caricamento impostazioni fallito{} {}
 message.config.savesettingserror=Salvataggio impostazioni fallita{} {}
