--- a/locale/messages_nl.properties
+++ b/locale/messages_nl.properties
@@ -13,6 +13,7 @@ Button.scrape=Scrape
 Button.edit=Bewerk
 Button.register=Registreer
 Button.rename=Hernoem
+Button.chooseplayer=Kies speler
 
 menuitem.cut=Cut
 menuitem.copy=Kopieer
@@ -30,7 +31,7 @@ tmm.settings=Instellingen
 # menu actions
 tmm.exit=Afsluiten
 tmm.exit.runningtasks=Weet u zeker dat u tinyMediaManager wilt afsluiten?\nEr zijn nog actieve processen...
-tmm.exit.confirmation=Afsluit bevestiging
+tmm.exit.confirmation=Bevestiging voor afsluiten
 tmm.cache=Cache
 tmm.clearurlcache=Wis url cache
 tmm.clearimagecache=wis afbeelding cache
@@ -62,17 +63,31 @@ tmm.update.title=check voor update
 tmm.update.message=Er is een nieuwe update gevonden.\nWil je updaten?
 tmm.registeredto=Geregistreerd voor\:
 tmm.registerdonator=Registreer voor de donateur versie
-tmm.registerdonator.error=Er is een probleem met het registreren van uw versie
+tmm.registerdonator.error=Er was een probleem om uw versie te registreren.\nHet registreren van uw donatie in ons systeem kan even duren. Probeer het a.u.b. over een paar minuten opnieuw. 
 tmm.registerdonator.success=Bedankt voor het registreren voor de donateur versie. Herstart tMM a.u.b.
-tmm.registerdonator.hint=Registreer hier voor de donateur versie. Deze versie heeft speciale functies als dank voor uw steun aan tMM. Vul dezelfde naam en email adres in als bij het doneren.
+tmm.registerdonator.hint=Registreer hier voor de donateur versie. Deze versie heeft speciale functies als dank voor uw steun. \n\nVul de zelfde naam en email adres in als bij het doneren.
 tmm.registerdonator.thanks=U heeft al geregistreerd voor de donateur versie. Nogmaals bedankt voor het doneren.
-tmm.donatorfunction.hint=Deze functie is exclusief voor donateurs.
+tmm.donatorfunction.hint=Deze functie is voorbehouden aan donateurs
+tmm.help=Help
+tmm.faq=Veel gestelde vragen
+tmm.forum=Kijk voor hulp in het tinyMediaManager forum
+tmm.queued=In wachtrij
+tmm.unknowntitle=Onbekende titel
+tmm.problemdetected=Probleem gevonden
+tmm.uicrash=Whoops. Er is iets onvoorzien gebeurd.\nHerstart TMM a.u.b. en probber opnieuw.\nAls het weer gebeurd, willen we u verzoeken een bug report in te dienen.
 
-status.activethreads=actieve processen
-status.queuesize=Wachtlijst\:
+status.activethreads=Er zijn actieve processen - klik voor details
+task.running=Bezig..
+task.queued=Wachten..
+task.cancelled=Geannuleerd..
+task.finished=Klaar..
+task.imagedownloads=Afbeeldingen aan het downloaden
+task.download=Bestand downloaden
+task.othertasks=Uitvoeren van taken op achtergrond 
+task.remaining=Taken nog te doen
 
 # menu & popup on rightclick
-onlyoneoperation=Maar één proces tegelijk toegestaan
+onlyoneoperation=Er is slechts één proces tegelijk mogelijk. De taak staat in de wachtrij
 update.datasource=Bronnen bijwerken
 update.datasource.unavailable=Databron {} niet beschikbaar - overslaan
 update.datasource.movieinroot=Bestand '{}' is gevonden in een map met meerdere films. Om deze toch te importeren moet u 'Sta meerdere films per map toe' activeren in film instellingen (zorgvuldig lezen\!)
@@ -81,8 +96,12 @@ export.detail=Template bevat detail pagina's
 export.setdestination=Stel export doel in
 export.selectdirectory=Selecteer export map
 
+update.cleanup=Schoon database op
+update.mediainfo=\ ophalen Mediainfo
+
 edit.discard=Negeer veranderingen
 
+movie.scraping=Scraping films
 movie.scrape.selected=Zoek & scrape geselecteerde film(s)
 movie.scrape.selected.force=Zoek & scrape geselecteerde film(s) - forceer beste match
 movie.scrape.selected.force.desc=Zoek & scrape geselecteerde film(s) zonder interactie; forceer beste match
@@ -92,19 +111,29 @@ movie.scrape.metadata=Scrape metadata voor geselecteerd film(s)
 movie.scrape.metadata.desc=Scrape metadata voor geselecteerd film(s)
 movie.scrape.nomatchfound=Geen geschikte film gevonden tijdens het zoeken
 movie.scrape.toosimilar=Film titels lijken teveel op elkaar - Kan niet beslissen welke te gebruiken
-movie.scrape.toolowscore=Gelijkenis score was te laag (<0.75) dus dit resultaat wordt niet gebruikt
-movie.remove=Verwijder geselecteerde film(s)
+movie.scrape.toolowscore=Gelijkenis score was te laag (<{}) dus dit resultaat wordt niet gebruikt
+movie.remove=Verwijder geselecteerd film(s) (DB)
+movie.delete=Verwijder geselecteerde film(s) (DB + file)
+movie.delete.hint=Verwijder geselecteerde film(s) uit tinyMediaManager DB en de databron
+movie.delete.desc=Verwijder geselecteerde film(s) uit tinyMediaManager DB en de databron?\nDe bestanden worden tijdelijk verplaatst naar de folder genaamd .deletedByTMM in de databron en verwijderd bij het afsluiten van tinyMediaManager
 movie.rename=Geselecteerde film(s) hernoemen/opschonen 
 movie.renamepreview=Hernoemen/opruimen geselecteerde film(s) - test
-movie.renamepreview.hint=Creeër een voorbeeld van de films die hernoemd moeten worden
+movie.renamepreview.hint=<html>Creeër een voorbeeld van de films die hernoemd moeten worden<br />Deze functie is voorbehouden aan donateurs</html>
 movie.renamerpreview=Hernoemer voorbeeld
 movie.updatemediainfo=Media informatie van geselecteerde film(s) bijwerken
 movie.bulkedit=Bulk bewerken
-movie.bulkedit.desc=Wijzig genres, tags, filmset en bekeken indicator voor geselecteerde films
+movie.bulkedit.desc=Wijzig genres, tags, filmset en bekeken label voor geselecteerde films
 movie.rewritenfo=Herschrijf NFO voor geselecteerde film(s)
 movie.clearimagecache=Wis afbeelding cache voor geselecteerde film(s)
 movie.findmissing.all=Zoek naar missende films in al uw databronnen
 movie.findmissing=Zoek missende films
+movie.assignmovieset=Zoek film set(s) voor geselecteerde film(s)
+movie.assignmovieset.desc=<html>Koppel geselecteerde film(s) aan hun film set(s)<br />Deze functie is voorbehouden aan donateurs</html>
+movie.setwatchedflag=Label de geselecteerde film(s) als bekeken
+movie.synctrakt=Synchroniseer de film collectie met Trakt.tv
+movie.synctrakt.desc=Synchroniseer de film collectie met Trakt.tv
+movie.synctraktwatched=Synchroniseer de bekeken status met Trakt.tv
+movie.synctraktwatched.desc=Synchroniseer de bekeken status met Trakt.tv
 
 movie.export=Geselecteerde film(s) exporteren
 
@@ -163,6 +192,10 @@ image.choose.fanart=Kies fanart
 image.choose.poster=Kies Poster
 image.choose.banner=Banner selecteren
 image.choose.season=Kies seizoen poster
+image.choose.logo=Kies logo
+image.choose.clearart=Kies clearart
+image.choose.thumb=Kies thumb
+image.choose.disc=Kies disc art
 image.extrathumbs.markall=Selecteer alle extrathumbs
 image.extrathumbs.unmarkall=Deselecteer alle extrathumbs
 image.extrafanart.markall=Selecteer alle extrafanart
@@ -170,8 +203,11 @@ image.extrafanart.unmarkall=Deselecteer alle extrafanart
 image.nonefound=geen afbeelding gevonden
 image.noneselected=geen afbeelding geselecteerd\!
 image.seteselected=Geselecteerde afbeelding instellen
+image.download=Afbeelding aan het downloaden
+image.download.failed=Kan de afbeelding niet downloaden
 image.download.noid=Geen ID (imdbId of tmdbId) voor zoeken beschikbaar
 image.download.progress=Downloaden van afbeeldingen
+image.download.nothingfound=Geen afbeeldingen gevonden
 image.poster.size=Poster formaat
 image.poster.naming=Poster naamgeving
 image.fanart.size=Fanart formaat
@@ -180,6 +216,10 @@ image.notfound.fanart=Geen fanart gevonden
 image.notfound.poster=Geen poster gevonden
 image.notfound.banner=Geen banner gevonden
 image.notfound.thumb=Geen thumb gevonden
+image.notfound.logo=Geen logo gevonden
+image.notfound.clearart=Geen clearart gevonden
+image.notfound.disc=Geen disc art gevonden
+image.showoriginal=Toon originele afbeelding
 
 genre.add=Genre toevoegen
 genre.remove=Verwijder genre 
@@ -222,7 +262,10 @@ Settings.images=Afbeeldingen
 Settings.tvshow=TV shows
 Settings.general=Algemeen
 Settings.externaldevices=Externe apparaten
+Settings.externalservices=Externe services
 Settings.filetypes=Bestand types
+Settings.trakttv=Trakt.tv
+Settings.trakttv.apikey=Trakt.tv API key
 
 # general settings
 Settings.proxy=Proxy instellingen
@@ -238,6 +281,19 @@ Settings.imagecachebackground=Hercreëer afbeelding cache automatisch in achterg
 Settings.loglevel=Loglevel
 Settings.language=UI Taal
 Settings.languagehint=De taal zal veranderen na herstart
+Settings.shownotifications=Toon mededelingen
+Settings.mediaplayer.hint=Kies een media speler voor het afspelen\n(De standaard speler zal worden gebruikt als u geen keuze maakt)
+Settings.fonts.hint=tinyMediaManager gebruikt het font 'Dialog' 12.\nHet wijzigen van font en/of grootte kan visuele gevolgen hebben maar veranderen niets aan de functionaliteit.
+Settings.fontfamily=Font familie
+Settings.fontsize=Font grootte
+Settings.fontchangehint=Het font zal gewijzigd worden na herstart\!
+Settings.ui=UI instellingen
+Settings.deletetrash=Verwijder vuilnisbak/backup map bij afsluiten
+Settings.trakt=Synchroniseer automatisch met Trakt.tv
+Settings.trakt.clearmovies=Verwijder films uit Trakt.tv
+Settings.trakt.clearmovies.hint=Waarschuwing\: Dit zal al uw films en bekeken status uit uw Trakt.tv profiel verwijderen. Doorgaan?
+Settings.trakt.cleartvshows=Verwijder TV series uit Trakt.tv
+Settings.trakt.cleartvshows.hint=Waarschuwing\: Dit zal al uw TV series en bekeken status uit uw Trakt.tv profiel verwijderen. Doorgaan?
 
 # image settings
 Settings.poster=Poster en Fanart
@@ -247,6 +303,7 @@ Settings.fanarttv.alert=Attentie\: Fanart.tv verstrekt geen poster
 Settings.moviefilename=<film bestandsnaam>
 Settings.tbn.deprecation=.tbn is verouderd en wordt binnenkort verwijderd
 Settings.naming.info=OPMERKING\: Bovenstaande opties creëren een bestand met .jpg of .PNG extensie afhankelijk van het formaat/type artwork .
+Settings.extraartwork=Extra artwork inschakelen
 Settings.enable.extrathumbs=Extrathumbs inschakelen
 Settings.resize.extrathumbs=Formaat extrathumbs wijzigen in (breedte)
 Settings.enable.extrafanart=Extrafanart inschakelen
@@ -306,8 +363,11 @@ Settings.macaddress=MAC adres
 Settings.movie.badwords=ongeoorloofd taalgebruik
 Settings.movie.badwords.hint=Ongeoorloofde woorden, welke zullen worden\nverwijderd van de gevonden film naam
 Settings.runtimefrommediafile=Voorkeurs runtime van MediaInfo
+Settings.trailer.preferred=Gebruik voorkeurs instellingen voor trailers
+Settings.trailer.source=Trailer bron
+Settings.trailer.quality=Trailer kwaliteit
 
-Settings.movie.renamer.info=Beschikbare methodes\:\n$T \= Titel\n$O \= Originele titel\n$1 \= Eerste letter van titel\n$E \= Sorteer titel\n$2 \= Eerste letter van Sorteer titel\n$Y \= Jaar\n$M \= Filmset titel (sorteer titel)\n$N \= Filmset titel\n$I \= IMDB nummer\n$C \= Certificering\n$R \= Video resolutie\n$A \= Audio code + kanalen\n$V \= Video code + formaat\n$F \= video formaat\n\n{} \= Optionele vervanging\nbv\: {Jaar $Y} -> "Jaar 2013" als $Y niet leeg is\nals $Y leeg is (of geen $x vervanging)\nde complete tag is leeg
+Settings.movie.renamer.info=Beschikbare methodes\:\n$T \= Titel\n$O \= Originele titel\n$1 \= Eerste letter van titel\n$E \= Sorteer titel\n$2 \= Eerste letter van Sorteer titel\n$Y \= Jaar\n$M \= Filmset titel (sorteer titel)\n$N \= Filmset titel\n$I \= IMDB nummer\n$C \= Certificering\n$R \= Video resolutie\n$A \= Audio code + kanalen\n$V \= Video code + formaat\n$F \= video formaat\n$S \= media bron (DVD etc)\n$3 \= 3D tag (3D SBS/TAB)\n\n{} \= Optionele vervanging\nbv\: {Jaar $Y} -> "Jaar 2013" als $Y niet leeg is\nals $Y leeg is (of geen $x vervanging)\nde complete tag is leeg
 Settings.movie.renamer.example=Kies een hernoem patroon voor de map en bestand \nHernoemen wordt overgeslagen bij lege velden\!
 Settings.movie.renamer.nomovie=tenmiste één film is nodig voor het voorbeeld
 Settings.movie.renamer.spacesubstitution=Vervang spaties door
@@ -323,11 +383,14 @@ Settings.tvshowseasontofilename=Voeg seizoen aan bestandsnaam toe
 Settings.tvshowtofilename=voeg TV serie naam aan bestandsnaam toe
 Settings.tvshowepisodetofilename=voeg aflevering titel toe aan bestandsnaam
 Settings.tvshowseasonfoldername=seizoen map naam
-Settings.tvshowseasonhint=$1 - Seizoen nummer\n$2 - Seizoen nummer met minstens 2 cijfers
+Settings.tvshowseasonhint=$1 - Seizoen nummer\n$2 - Seizoen nummer met minstens 2 cijfers\nUw kunt voorkomen dat er een seizoen map wordt aangemaakt door dit veld leeg te laten. Maar om het te gebruiken moet u \\"voeg seizoen toe aan bestandsnaam\\" aan vinken
 Settings.separator=Seperator
+Settings.separator.hint=Scheiding tussen titel en seizoen/aflevering nummer
+Settings.tvshowspacereplacement.hint=Vervang spaties in titel met dit karakter
 Settings.tvshow.certifactioncountry.hint=Tip\: Momenteel ondersteund geen enkele scraper certificaties uit verschillende landen. \nDe TV Database zal altijd US certificaties opleveren.\nAniDB biedt geen certificaties
 
 # tv shows
+tvshow.scraping=Scraping TV series
 tvshow.scrape.newitems=Scrape nieuwe onderdelen
 tvshow.scrape.selected=Zoek & Scrape geselecteerde TV serie(s)
 tvshow.scrape.selected.force=Zoek & Scrape geselecteerde TV serie(s) - forceer beste match
@@ -336,10 +399,13 @@ tvshow.scrape.nomatchfound=Geen geschikte TV serie gevonden tijdens het zoeken
 tvshow.edit=Bewerk geselecteerde TV serie(s)/aflevering(en)
 tvshow.edit.abortqueue.desc=Stop bewerking geselecteerde TV series
 tvshow.remove=Wis geselecteerde TV serie(s)/aflevering(en)
+tvshow.delete=Verwijder geselecteerde TV serie(s)/aflevering(en)
+tvshow.delete.hint=Verwijder geselecteerde TV serie(s)/aflevering(en) uit tinyMediaManager en de databron
+tvshow.delete.desc=Verwijder geselecteerde TV serie(s)/aflevering(en) uit tinyMediaManager en de databron?\nDe bestanden worden tijdelijk verplaatst naar de folder genaamd .deletedByTMM in de databron en verwijderd bij het afsluiten van tinyMediaManager
 tvshow.changeseasonposter=Verander seizoens poster van geselecteerde seizoen(en)
 tvshow.change=Wissel TV serie
 tvshow.bulkedit=Bulk bewerken
-tvshow.bulkedit.desc=Verander genres, tags en/of gezien flag, seizoen van geselecteerde TV series
+tvshow.bulkedit.desc=Wijzig genres en tags van geselecteerde TV series en/of het gezien label en seizoen van de geselecteerde TV afleveringen
 tvshow.scrapeepisodeseasondata=Scrape seizoen & aflevering data
 tvshow.update=Update geselecteerde TV serie(s)
 tvshow.rewritenfo=Herschrijf NFO voor geselecteerde TV serie(s)
@@ -348,12 +414,28 @@ tvshow.clearimagecache=Wis afbeelding cache voor geselecteerde TV serie(s)/aflev
 tvshow.renamer.failedrename=Mislukt om aflevering {} te hernoemen - ongeldig seizoen en/of aflevering nummer
 tvshow.renamer.tvshowfolder=Hernoem TV serie map
 tvshow.renamer.tvshowfolder.year=Jaar toevoegen aan TV serie map
+tvshow.updatemediainfo=Media informatie van geselecteerde TV serie(s)/aflevering(en) bijwerken
+tvshow.export=Exporteer geselecteerde TV serie(s)
+tvshow.synctrakt=Synchroniseer de TV serie collectie met Trakt.tv
+tvshow.synctrakt.desc=Synchroniseer de TV serie collectie met Trakt.tv
+tvshow.synctraktwatched=Synchroniseer de bekeken status met Trakt.tv
+tvshow.synctraktwatched.desc=Synchroniseer de bekeken status met Trakt.tv
 
 tvshowepisode.scrape=Metadata aflevering scrapen
 tvshowepisode.clone=Dupliceer aflevering
 tvshowepisode.remove=Wis aflevering
 tvshowepisode.rewritenfo=Herschrijf NFO voor geselecteerde aflevering(en)
 tvshowepisode.choose=Kies een aflevering
+tvshowepisode.setwatchedflag=Label de geselecteerde aflevering(en) als bekeken
+
+trakt.sync=Synchroniseer Trakt.tv data
+trakt.sync.movie=Synchroniseren film collectie
+trakt.sync.moviewatched=Synchroniseren bekeken status films
+trakt.sync.tvshow=Synchroniseren TV serie collectie
+trakt.sync.tvshowwatched=Synchroniseren TV serie bekeken status
+trakt.clear=Trakt.tv data verwijderen
+trakt.clear.movies=Trakt.tv film(s) data verwijderen
+trakt.clear.tvshows=Trakt.tv TV serie(s) data verwijderen
 
 # metatags
 metatag.actors=Acteurs
@@ -374,6 +456,7 @@ metatag.director=Regisseur
 metatag.episode=Aflevering
 metatag.episodes=Afleveringen
 metatag.external=extern
+metatag.extraartwork=Extra artwork
 metatag.filename=Bestandsnaam
 metatag.files=Bestanden
 metatag.format=Format
@@ -440,9 +523,13 @@ mediafiletype.nfo=NFO
 mediafiletype.poster=Poster
 mediafiletype.fanart=Fanart
 mediafiletype.banner=Banner
+mediafiletype.clearart=Clearart
+mediafiletype.logo=Logo
+mediafiletype.discart=Disc art
 mediafiletype.thumb=Thumb
 mediafiletype.trailer=Trailer
 mediafiletype.extrafanart=Extrafanart
+mediafiletype.extrathumb=Extrathumb
 mediafiletype.graphic=Graphic
 mediafiletype.movie=Film
 mediafiletype.episode=Aflevering
@@ -505,6 +592,7 @@ message.update.errormoviedir=Mislukt film map{} {} te verwerken
 
 message.database.loadmovies=Kan films niet uit database laden
 message.database.loadtvshows=Kan tv serie niet uit database laden
+message.database.corrupteddata=Er werd corrupte data gevonden en verwijderd uit uw database. Update alstublieft uw databronnen
 
 message.config.loadsettingserror=Instellingen laden mislukt{} {}
 message.config.savesettingserror=Instellingen opslaan mislukt{} {}
