--- a/locale/messages_pt.properties
+++ b/locale/messages_pt.properties
@@ -13,6 +13,7 @@ Button.scrape=Pesquisar
 Button.edit=Editar
 Button.register=Registrar
 Button.rename=Renomear
+# Button.chooseplayer=Choose player
 
 menuitem.cut=Cortar
 menuitem.copy=Copiar
@@ -28,9 +29,9 @@ tmm.tvshow=Programa de TV
 tmm.settings=Configurações
 
 # menu actions
-tmm.exit=Sair
+# tmm.exit=Quit
 tmm.exit.runningtasks=Tem certeza que quer fechar o tinyMediaManager?\nHá ainda há processos em execução...
-tmm.exit.confirmation=Confirmar saída
+# tmm.exit.confirmation=Quit confirmation
 tmm.cache=Cache
 tmm.clearurlcache=limpar cache de url
 tmm.clearimagecache=limpar cache de imagem
@@ -62,17 +63,31 @@ tmm.update.title=Checar atualizações
 tmm.update.message=Nova atualização encontrada.\nGostaria de instalar?
 tmm.registeredto=Registrado para\:
 tmm.registerdonator=Registrar para versão de doador
-tmm.registerdonator.error=Houve um problema registrando sua versã
+# tmm.registerdonator.error=There was a problem registering your version.\nRegistering your donation in our system may take a while. Please try again in a few minutes.
 tmm.registerdonator.success=Obrigado por registrar para versão de doador. Por favor reinicie o TMM
-tmm.registerdonator.hint=Aqui você pode registrar para versão de doador. A versão de doador tem funções especiais como agradecimento aos apoiadores. Por favor, preencha seu nome e endereço utilizado na doação.
+# tmm.registerdonator.hint=Here you can register to the donator version. The donator version will have some special features as a "thank you" for our supporters.\n\nPlease fill in the name and email address you used when donating.
 tmm.registerdonator.thanks=Você já se registrou para versão de doador. Obrigado novamente pela doação\!
-tmm.donatorfunction.hint=Esta função é restrita a nossos doadores.
+tmm.donatorfunction.hint=Esta função é restrita aos doadores
+tmm.help=Ajuda
+tmm.faq=Perguntas frequentes
+tmm.forum=Encontrar ajuda no Forum do tinyMediaManager
+tmm.queued=na fila
+# tmm.unknowntitle=Unknown title
+# tmm.problemdetected=Problem detected
+# tmm.uicrash=Whoops. Something unforeseen has happened.\nPlease restart TMM and try again.\nIf it happens again, we would kindly ask you to submit a bugreport.
 
-status.activethreads=processos ativos
-status.queuesize=Fila\:
+status.activethreads=Há tópicos ativos - clique para detalhes
+task.running=Trabalhando..
+task.queued=Esperando...
+task.cancelled=Cancelado...
+task.finished=Finalizado...
+task.imagedownloads=Baixando imagens
+task.download=Baixando arquivo
+task.othertasks=Fazendo tarefas internas
+task.remaining=Tarefas restantes
 
 # menu & popup on rightclick
-onlyoneoperation=Somente uma operação por vez é permitda
+onlyoneoperation=Uma operação por vez é permitida. A tarefa será enfileirada
 update.datasource=Atualizar fontes
 update.datasource.unavailable=Fonte {}{} não disponível - pulando
 update.datasource.movieinroot=Encontrado arquivo '{}' em um diretório contendo mais de um filme. Para ser importado, por favor ative a função 'Permitir importar múltiplos filmes por diretório' nas configurações (leia com atenção\!)
@@ -81,8 +96,12 @@ export.detail=Modelo contém detalhes
 export.setdestination=Definir destino de exportação
 export.selectdirectory=selecionar diretório de exportação
 
+update.cleanup=Limpando base de dados
+update.mediainfo=pegando Mediainfo
+
 edit.discard=Descartar alterações
 
+movie.scraping=Pesquisando filme
 movie.scrape.selected=Buscar & atualizar filme(s) selecionado(s)
 movie.scrape.selected.force=Buscar & atualizar filme(s) selecionado(s) - forçar melhor resultado
 movie.scrape.selected.force.desc=Buscar & atualizar filme(s) selecionado(s) sem interação; forçar melhor resultado
@@ -92,11 +111,14 @@ movie.scrape.metadata=Buscar dados para filme(s) selecionado(s)
 movie.scrape.metadata.desc=Buscar dados para filme(s) selecionado(s)
 movie.scrape.nomatchfound=Nenhum filme encontrado na busca
 movie.scrape.toosimilar=Títulos muito similares - não consigo decidir qual usar
-movie.scrape.toolowscore=A pontuação foi muito baixa (<0.75) então não consideraremos este resultado
-movie.remove=Remover filme(s) selecionado(s)
+movie.scrape.toolowscore=O score atingido foi muito baixo ({}) então não consideraremos o resultado
+# movie.remove=Remove selected movie(s) (DB)
+# movie.delete=Delete selected movie(s) (DB + file)
+# movie.delete.hint=Delete selected movie(s) from tinyMediaManager DB and your data source\!
+# movie.delete.desc=Delete selected movie(s) from tinyMediaManager DB and the data source?\nThe files will be temporary moved to a folder called .deletedByTMM inside the data source and deleted on exit of tinyMediaManager
 movie.rename=Renomear/limpar filme(s) selecionado(s)
 movie.renamepreview=Renomear/limpar filme(s) selecionado(s) - testar
-movie.renamepreview.hint=Criar prévia, quais filmes precisam ser renomeados
+movie.renamepreview.hint=<html>Criar uma prévia, quais filmes devem ser renomeados<br />Função restrita a nossos doadores</html>
 movie.renamerpreview=Renomear prévia
 movie.updatemediainfo=Atualizar informação de mídia do(s) filme(s) selecionado(s)
 movie.bulkedit=Edição em lote
@@ -105,6 +127,13 @@ movie.rewritenfo=Reescrever NFO p/ filme(s) selecionado(s)
 movie.clearimagecache=Limpar imagem de cache do(s) filme(s) selecionado(s)
 movie.findmissing.all=Buscar filmes não localizados em todas as origens
 movie.findmissing=Buscar filmes não localizados
+movie.assignmovieset=Encontrar coleções para o(s) filme(s) selecionado(s)
+movie.assignmovieset.desc=<html>Associar o(s) filme(s) selecionados à coleção<br />Esta função é restrita aos nossos doadores</html>
+movie.setwatchedflag=Marcar o(s) filme(s) selecionado(s) como assistido(s)
+# movie.synctrakt=Synchronize the movie collection with Trakt.tv
+# movie.synctrakt.desc=Synchronize the movie collection with Trakt.tv
+# movie.synctraktwatched=Synchronize the watched state with Trakt.tv
+# movie.synctraktwatched.desc=Synchronize the watched state with Trakt.tv
 
 movie.export=Exportar filme(s) selecionado(s)
 
@@ -163,6 +192,10 @@ image.choose.fanart=Escolha um fanart
 image.choose.poster=Escolha um pôster
 image.choose.banner=Escolher banner
 image.choose.season=Escolher poster de temporada
+# image.choose.logo=Choose logo
+# image.choose.clearart=Choose clearart
+# image.choose.thumb=Choose thumb
+# image.choose.disc=Choose disc art
 image.extrathumbs.markall=Marque todos as miniaturas
 image.extrathumbs.unmarkall=Desmarque todas as miniaturas
 image.extrafanart.markall=Marque todos os fanarts
@@ -170,8 +203,11 @@ image.extrafanart.unmarkall=Desmarque todos os fanarts
 image.nonefound=imagem não encontrada
 image.noneselected=imagem não selecionada
 image.seteselected=Definir imagem selecionada
+# image.download=Downloading image
+# image.download.failed=Could not download image
 image.download.noid=Sem ID (imdb ou tmdb) para busca disponível
 image.download.progress=Baixando imagens
+# image.download.nothingfound=No images found
 image.poster.size=Tamanho do pôster
 image.poster.naming=Nome do pôster
 image.fanart.size=Tamanho do Fanart
@@ -180,6 +216,10 @@ image.notfound.fanart=Fanart não encontrada
 image.notfound.poster=Poster não encontrado
 image.notfound.banner=Banner não encontrado
 image.notfound.thumb=Miniatura não encontrada
+# image.notfound.logo=No logo found
+# image.notfound.clearart=No clearart found
+# image.notfound.disc=No disc art found
+# image.showoriginal=Show original image
 
 genre.add=Adicionar gênero
 genre.remove=Remover gênero
@@ -222,7 +262,10 @@ Settings.images=Imagens
 Settings.tvshow=Programas de TV
 Settings.general=Geral
 Settings.externaldevices=Dispositivos externos
+# Settings.externalservices=External services
 Settings.filetypes=Tipos de arquivo
+# Settings.trakttv=Trakt.tv
+# Settings.trakttv.apikey=Trakt.tv API key
 
 # general settings
 Settings.proxy=Configurações de Proxy
@@ -238,6 +281,19 @@ Settings.imagecachebackground=Reconstruir cache de imagem automaticamente
 Settings.loglevel=Nível de Log
 Settings.language=Idioma da Interface
 Settings.languagehint=O idioma será alterado após reiniciar\!
+Settings.shownotifications=Mostrar notificações
+# Settings.mediaplayer.hint=Specify a media player which will be used for playback\r\n(if no one is chosen, the default player will be taken)
+# Settings.fonts.hint=tinyMediaManager has been created with the font "Dialog" size 12.\r\nChanging the font and/or size can cause visual glitches (but not break functionality\!)
+# Settings.fontfamily=Font family
+# Settings.fontsize=Font size
+# Settings.fontchangehint=The font will be changed after restart\!
+# Settings.ui=UI settings
+# Settings.deletetrash=Delete trash/backup folder on exit
+# Settings.trakt=Automatic sync with Trakt.tv
+# Settings.trakt.clearmovies=Remove movies from Trakt.tv
+# Settings.trakt.clearmovies.hint=ATTENTION\: This will remove all your movies and watched states from your Trakt.tv profile. Proceed?
+# Settings.trakt.cleartvshows=Remove TV shows from Trakt.tv
+# Settings.trakt.cleartvshows.hint=ATTENTION\: This will remove all your TV shows and watched states from your Trakt.tv profile. Proceed?
 
 # image settings
 Settings.poster=Pôster e Fanart
@@ -247,6 +303,7 @@ Settings.fanarttv.alert=Atenção\: Fanart.tv não fornece pôster
 Settings.moviefilename=<nomearquivo filme>
 Settings.tbn.deprecation=.tbn está desatualizado e será removido em breve
 Settings.naming.info=NOTA\: As opções acima vão criar um arquivo com extensão .JPG ou .PNG dependendo do formato/tipo da Arte
+# Settings.extraartwork=Enable extra artwork
 Settings.enable.extrathumbs=Habilitar miniaturas adicionais
 Settings.resize.extrathumbs=Redicionar miniaturas adicionais para (largura)
 Settings.enable.extrafanart=Habilitar Fanart extra
@@ -306,8 +363,11 @@ Settings.macaddress=MAC address
 Settings.movie.badwords=Palavrões
 Settings.movie.badwords.hint=Palavrões, que serão removidas do\nnome identificado do filme
 Settings.runtimefrommediafile=Preferir tempo de duração do MediaInfo
+# Settings.trailer.preferred=Use preferred trailer settings
+# Settings.trailer.source=Trailer source
+# Settings.trailer.quality=Trailer quality
 
-Settings.movie.renamer.info=Padrão Disponível\:\n$T \= Título\n$O \= TítuloOriginal\n$1 \= primeira letra do título\n$E \= TítuloDeOrganização\n$2 \= Primeira letra do título de organização\n$Y \= Ano\n$M \= Título da coleção (título de organização)\n$N \= Título da coleção\n$I \= Número IMDB \n$C \= Certificação\n$R \= Resolução do Vídeo\n$A \= codificação de audio + canais\n$V \= codificação de vídeo + formato\n$F \= formato de vídeo\n\n{} \= substituto opcional\n ex\: {Ano $Y} -> "Ano 2013" se $Y não for vazio\n se $Y não for vazio (ou nenhum $x substituto dentro)\n a etiqueta inteira está vazia
+# Settings.movie.renamer.info=Available pattern\:\r\n$T \= Title\r\n$O \= OriginalTitle\r\n$1 \= first letter of the title\r\n$E \= Sort title\r\n$2 \= first letter of sort title\r\n$Y \= Year\r\n$M \= Movieset title (sort title)\r\n$N \= Movieset title\r\n$I \= IMDB number\r\n$C \= Certification\r\n$R \= Video resolution\r\n$A \= audio code + channels\r\n$V \= video code + format\r\n$F \= video format\r\n$S \= media source (DVD etc)\r\n$3 \= 3D tag (3D SBS/TAB)\r\n\r\n{} \= optional replacement\r\n eg\: {Year $Y} -> "Year 2013" if $Y is not empty\r\n if $Y is empty (or no $x replacement inside)\r\n the complete tag is empty
 Settings.movie.renamer.example=Escolha um arquivo e padrão p/ renomear\nSe o campo estiver em branco, não serão renomeados
 Settings.movie.renamer.nomovie=pelo menos um filme é necessário como exemplo
 Settings.movie.renamer.spacesubstitution=Substituir espaços por
@@ -323,11 +383,14 @@ Settings.tvshowseasontofilename=adicionar temporada ao nome
 Settings.tvshowtofilename=adicionar Programa ao nome
 Settings.tvshowepisodetofilename=adicionar episódio ao nome
 Settings.tvshowseasonfoldername=nome diretório temporada
-Settings.tvshowseasonhint=$1 - Número da temporada\n$2 - Número da temporada com 2 dígitos
+# Settings.tvshowseasonhint=$1 - Season number\n$2 - Season number with at least 2 digits\nYou can omit creating the season folder by leaving this field blank.\nBut to use this, you have to check \\"add season to filename\\"
 Settings.separator=Separador
+# Settings.separator.hint=Separator between title and season/episode number
+# Settings.tvshowspacereplacement.hint=Replace spaces in title with this character
 Settings.tvshow.certifactioncountry.hint=Dica\: no momento nenhum dos pesquisadores suportam certificações de países diferentes.\nO TV Database  sempre vai retornar certificações US\nO AniDB não fornece certificações.
 
 # tv shows
+tvshow.scraping=Pesquisando Shows de TV
 tvshow.scrape.newitems=Buscar novos itens
 tvshow.scrape.selected=Pesquisar e buscar Programas de Tv selecionados
 tvshow.scrape.selected.force=Pesquisar e buscar programa(s) de TV selecionados - forçar melhor resultado
@@ -336,6 +399,9 @@ tvshow.scrape.nomatchfound=Nenhum programa de TV encontrado na busca
 tvshow.edit=Editar programa(s) de TV/episódio(s)
 tvshow.edit.abortqueue.desc=Abortar edição dos Programas de TV selecionados
 tvshow.remove=Remover o(s) programa(s) de TV/episódio(s)
+# tvshow.delete=Delete selected TV show(s)/episode(s)
+# tvshow.delete.hint=Delete selected TV show(s)/episode(s) from tinyMediaManager and the data source
+# tvshow.delete.desc=Delete selected TV show(s)/episode(s) from tinyMediaManager and the data source?\nThe files will be temporary moved to a folder called .deletedByTMM inside the data source and deleted on exit of tinyMediaManager
 tvshow.changeseasonposter=Alterar poster de temporada da seleção
 tvshow.change=Alterar programa de TV
 tvshow.bulkedit=Edição em lote
@@ -348,12 +414,28 @@ tvshow.clearimagecache=Limpar cache de imagem para o(s) Programa(s) de TV/Episó
 tvshow.renamer.failedrename=Falha ao renomear episódio {} - número de temporada e/ou episódio inválido
 tvshow.renamer.tvshowfolder=Renomear diretório Programas de TV
 tvshow.renamer.tvshowfolder.year=Adicionar ano ao Diretório dos Programas de TV
+# tvshow.updatemediainfo=Update media information of selected TV shows(s)/episodes(s)
+# tvshow.export=Export selected TV show(s)
+# tvshow.synctrakt=Synchronize the TV show collection with Trakt.tv
+# tvshow.synctrakt.desc=Synchronize the TV show collection with Trakt.tv
+# tvshow.synctraktwatched=Synchronize the watched state with Trakt.tv
+# tvshow.synctraktwatched.desc=Synchronize the watched state with Trakt.tv
 
 tvshowepisode.scrape=Pesquisar dados do episódio
 tvshowepisode.clone=Duplicar episódio
 tvshowepisode.remove=Remover episódio
 tvshowepisode.rewritenfo=Reescrever NFO p/ episódio(s) selecionado(s)
 tvshowepisode.choose=Escolher um episódio
+tvshowepisode.setwatchedflag=Marcar a(s) série(s) selecionado(s) como assistido(s)
+
+# trakt.sync=Sync Trakt.tv data
+# trakt.sync.movie=Syncing movie collection
+# trakt.sync.moviewatched=Syncing movie watched state
+# trakt.sync.tvshow=Syncing TV show collection
+# trakt.sync.tvshowwatched=Syncing TV show watched state
+# trakt.clear=Clearing Trakt.tv data
+# trakt.clear.movies=Clearing Trakt.tv movie(s)
+# trakt.clear.tvshows=Clearing Trakt.tv TV show(s)
 
 # metatags
 metatag.actors=Atores
@@ -374,6 +456,7 @@ metatag.director=Diretor
 metatag.episode=Episódio
 metatag.episodes=Episódios
 metatag.external=externo
+# metatag.extraartwork=Extra artwork
 metatag.filename=Nome Arquivo
 metatag.files=Arquivos
 metatag.format=Formato
@@ -440,9 +523,13 @@ mediafiletype.nfo=NFO
 mediafiletype.poster=Poster
 mediafiletype.fanart=Fanart
 mediafiletype.banner=Banner
+# mediafiletype.clearart=Clearart
+# mediafiletype.logo=Logo
+# mediafiletype.discart=Disc art
 mediafiletype.thumb=Miniatura
 mediafiletype.trailer=Trailer
 mediafiletype.extrafanart=Fanart extra
+# mediafiletype.extrathumb=Extrathumb
 mediafiletype.graphic=Gráfico
 mediafiletype.movie=Filme
 mediafiletype.episode=Episódio
@@ -505,6 +592,7 @@ message.update.errormoviedir=Falha ao ler diretório do filme{}{}
 
 message.database.loadmovies=Não foi possível ler os filmes do banco de dados
 message.database.loadtvshows=Impossível carregar Programas de Tv do banco de dados
+# message.database.corrupteddata=Corrupted data has been found and removed from your database. Please update your data sources\!
 
 message.config.loadsettingserror=Carregar configurações falhou{}{}
 message.config.savesettingserror=Salvar configurações falhou{}{}
