--- a/locale/messages_sk.properties
+++ b/locale/messages_sk.properties
@@ -13,6 +13,7 @@ Button.scrape=Stiahni
 Button.edit=Upraviť
 Button.register=Registrovať
 Button.rename=Premenovať
+Button.chooseplayer=Vybrať prehrávač
 
 menuitem.cut=Vystrihnúť
 menuitem.copy=Kopírovať
@@ -61,18 +62,32 @@ tmm.subtitles=Titulky
 tmm.update.title=skontrolovať aktualizácie
 tmm.update.message=Bola nájdená aktualizácia.\nChcete aktualizovať?
 tmm.registeredto=Registrované na\:
-tmm.registerdonator=Registrovať darcovskú verziu
-tmm.registerdonator.error=Nastal problém pri registrácii Vašej verzie
-tmm.registerdonator.success=Ďakujeme za registráciu pre darcovskú verziu. Prosím reštartujte tMM.
-tmm.registerdonator.hint=Tu si môžte zaregistrovať darcovskú verziu. Darcovská verzia bude mať špeciálne funkcie na vyjadrenie nášho "ďakujeme" naším podporovateľom. Prosím vyplňte meno a email, ktorý ste použili keď ste prispievali.
-tmm.registerdonator.thanks=Už ste sa registrovali na darcovskú verziu. Znova ďakujeme za príspevok\!
-tmm.donatorfunction.hint=Táto funkcia je vyhradená pre našich darcov.
+tmm.registerdonator=Registrovať sponzorskú verziu
+tmm.registerdonator.error=Nastal problém pri registrácii Vašej verzie.\nRegistrácia Vašeho príspevku  v našom systéme môže chvíľu trvať. Vyskúšajte to znovu o pár minút.
+tmm.registerdonator.success=Ďakujeme za registráciu pre sponzorskú verziu. Prosím reštartujte tMM.
+tmm.registerdonator.hint=Tu si môžte zaregistrovať sponzorskú verziu. Sponzorská verzia bude mať špeciálne funkcie na vyjadrenie nášho "ďakujeme" naším podporovateľom. \nProsím vyplňte meno a email, ktorý ste použili keď ste prispievali.
+tmm.registerdonator.thanks=Už ste sa registrovali na sponzorskú verziu. Znova ďakujeme za príspevok\!
+tmm.donatorfunction.hint=Táto funkcia je vyhradená pre našich sponzorov
+tmm.help=Pomoc
+tmm.faq=Často kladené otázky
+tmm.forum=Nájsť pomoc na fóre tinyMediaManager
+tmm.queued=zaradený
+tmm.unknowntitle=Neznámy názov
+tmm.problemdetected=Zistený problém
+tmm.uicrash=Ups. Stalo sa niečo neočakávané.\nReštartujte prosím program a skúste to znovu.\nPokiaľ sa to stane znova, pošlite správu o chybe.
 
-status.activethreads=aktívne vlákna
-status.queuesize=Front\:
+status.activethreads=Stále sú aktívne vlákna - kliknite pre viac informácií
+task.running=Pracuje...
+task.queued=Čakanie...
+task.cancelled=Zrušený...
+task.finished=Ukončený...
+task.imagedownloads=Sťahujem obrázky
+task.download=Sťahovanie súboru
+task.othertasks=Vykonávanie úloh na pozadí
+task.remaining=zostávajúce úlohy
 
 # menu & popup on rightclick
-onlyoneoperation=V jednom okamihu Je povolená iba jedna operácia
+onlyoneoperation=Je povolená len jedna operácia. Úloha bude zaradená do fronty
 update.datasource=Aktualizovať zdroje dát
 update.datasource.unavailable=Zdroj dát {} nie je dostupný - preskakujem
 update.datasource.movieinroot=Nájdený súbor '{}' v adresári, ktorý obsahuje viac ako jeden film. Pre importovanie prosím aktivujte funkciu 'Povoliť viac filmov v jednom priečinku' v nastavení filmov (čítajte pozorne)
@@ -81,8 +96,12 @@ export.detail=Šablóna obsahuje stránky podrobností
 export.setdestination=Nastaviť cieľový priečinok exportu
 export.selectdirectory=Vyberte cieľový priečinok exportu
 
+update.cleanup=Čistenie databázy
+update.mediainfo=získavanie informácií média
+
 edit.discard=Zahodiť zmeny
 
+movie.scraping=Sťahovanie informácií o filmoch
 movie.scrape.selected=Nájdi a stiahni informácie označených filmov
 movie.scrape.selected.force=Nájdi a stiahni informácie označených filmov - vynútiť najväčšiu zhodu
 movie.scrape.selected.force.desc=Nájdi a stiahni informácie označených filmov bez zásahu užívateľa; vynucuje najväčšiu zhodu
@@ -92,11 +111,14 @@ movie.scrape.metadata=Stiahni metadáta pre označené filmy
 movie.scrape.metadata.desc=Stiahni metadáta pre označené filmy
 movie.scrape.nomatchfound=Pri vyhľadávaní nebol nájdený vhodný film
 movie.scrape.toosimilar=Názvy filmov sú príliš podobné - nemožno rozhodnúť, ktorý použiť
-movie.scrape.toolowscore=Zhoda bola príliš nízka (<0.75) preto neberieme tento výsledok
-movie.remove=Odstrániť označené filmy
+movie.scrape.toolowscore=Zhoda bola príliš nízka (<{}) preto bol tento výsledok vynechaný
+movie.remove=Odstrániť označené filmy (databáza)
+movie.delete=Odstrániť označené filmy (databáza+súbor)
+movie.delete.hint=Odstrániť označené filmy z tinyMediaManager databázy a zo zdroja dát\!
+movie.delete.desc=Odstrániť označené filmy z tinyMediaManager databázy a zo zdroja dát?\nSúbory budu dočasne presunuté do zložky .deletedByTMM umiestnenej v zdroji dát a vymazané pri ukončení tinyMediaManageru
 movie.rename=Premenovať/vyčistiť označené filmy
 movie.renamepreview=Premenovať/vyčistiť označené filmy - dry run test
-movie.renamepreview.hint=Vytvorí náhľad filmov, ktoré majú byť premenované
+movie.renamepreview.hint=Vytvoriť náhľad filmov, ktoré majú byť premenované. Táto funkcia je vyhradená pre našich sponzorov.
 movie.renamerpreview=Náhľad premenovania
 movie.updatemediainfo=Aktualizovať informácie o médiu označených filmov
 movie.bulkedit=Hromadná úprava
@@ -105,6 +127,13 @@ movie.rewritenfo=Prepísať NFO označených filmov
 movie.clearimagecache=Vyčistiť medzi-pamäť obrázkov pre označené filmy
 movie.findmissing.all=Nájsť chýbajúce filmy vo všetkých zdrojoch dát
 movie.findmissing=Nájsť chýbajúce filmy
+movie.assignmovieset=Nájsť kolekcie filmov pre označené filmy
+movie.assignmovieset.desc=Priradiť označené filmy k ich kolekciam. Táto funkcia je vyhradená pre našich sponzorov.
+movie.setwatchedflag=Zmeniť označenie 'Videné' pre označené filmy
+movie.synctrakt=Synchronizovať kolekciu filmou s Trakt.tv
+movie.synctrakt.desc=Synchronizovať kolekciu filmou s Trakt.tv
+movie.synctraktwatched=Synchronizovať označenie 'Videné' s Trakt.tv
+movie.synctraktwatched.desc=Synchronizovať označenie 'Videné' s Trakt.tv
 
 movie.export=Exportovať označené filmy
 
@@ -155,14 +184,18 @@ scraper.metadata.defaults=Predvolené metadáta na stiahnutie
 scraper.start=Spustenie sťahovania informácii
 scraper.metadata=Scraper metadát
 scraper.artwork=Scraper artworku
-scraper.trailer=Scraper ukážky
+scraper.trailer=Scraper traileru
 
-image.choose=Vyberte obrázok
-image.choose.file=Vyberte súbor
-image.choose.fanart=Vyberte FanArt
-image.choose.poster=Vyberte plagát
-image.choose.banner=Vyberte banner
-image.choose.season=Vyberte plagát sezóny
+image.choose=Vybrať obrázok
+image.choose.file=Vybrať súbor
+image.choose.fanart=Vybrať FanArt
+image.choose.poster=Vybrať plagát
+image.choose.banner=Vybrať banner
+image.choose.season=Vybrať plagát sezóny
+image.choose.logo=Vybrať logo
+image.choose.clearart=Vybrať clearart
+image.choose.thumb=Vybrať náhľad
+image.choose.disc=Vybrať disc art
 image.extrathumbs.markall=Označiť všetky extra náhľady
 image.extrathumbs.unmarkall=Odznačiť všetky extra náhľady
 image.extrafanart.markall=Označiť všetky extra FanArty
@@ -170,8 +203,11 @@ image.extrafanart.unmarkall=Odznačiť všetky extra FanArty
 image.nonefound=nenájdený žiadny obrázok
 image.noneselected=nie je označený žiaden obrázok\!
 image.seteselected=Použi označený obrázok
+image.download=Sťahujem obrázok
+image.download.failed=Obrázok sa nedá stiahnuť
 image.download.noid=Nie je dostupné žiadne ID (imdbId alebo tmdbId) pre hľadanie
 image.download.progress=Sťahujem obrázky
+image.download.nothingfound=Nenájdené žiadne obrázky
 image.poster.size=Veľkosť plagátu
 image.poster.naming=Pomenovanie súboru plagátu
 image.fanart.size=Veľkosť FanArtu
@@ -180,12 +216,16 @@ image.notfound.fanart=FanArt nenájdený
 image.notfound.poster=Plagát nenájdený
 image.notfound.banner=Banner nenájdený
 image.notfound.thumb=Náhľad nenájdený
+image.notfound.logo=Logo nenájdené
+image.notfound.clearart=Clearart nenájdený
+image.notfound.disc=Disc art nenájdený
+image.showoriginal=Ukázať originálny obrázok
 
 genre.add=Pridať žáner
 genre.remove=Odstrániť žáner
 
-trailer.add=Pridať ukážku
-trailer.remove=Odstrániť označenú ukážku
+trailer.add=Pridať trailer
+trailer.remove=Odstrániť označený trailer
 
 tag.add=Pridať značku
 tag.remove=Odstrániť označenú značku
@@ -222,7 +262,10 @@ Settings.images=Obrázky
 Settings.tvshow=Seriály
 Settings.general=Všeobecné
 Settings.externaldevices=Externé zariadenia
+Settings.externalservices=Externé služby
 Settings.filetypes=Typy súborov
+Settings.trakttv=Trakt.tv
+Settings.trakttv.apikey=Trakt.tv API key
 
 # general settings
 Settings.proxy=Nastavenia proxy
@@ -238,6 +281,19 @@ Settings.imagecachebackground=Automaticky vytvoriť vyrovnávaciu pamäť obráz
 Settings.loglevel=Loglevel
 Settings.language=Jazyk UI
 Settings.languagehint=Jazyk sa zmení po reštarte\!
+Settings.shownotifications=Zobraziť oznámenia
+Settings.mediaplayer.hint=Určenie prehrávača, ktorý bude použitý na prehrávanie\n(pokiaľ nie je vybraný žiaden, bude použitý predvolený prehrávač)
+Settings.fonts.hint=tinyMediaManager bol vytvorený s fontom "Dialog" veľkosti 12.\nZmena fontu alebo jeho veľkosti môže spôsobiť poruchu v grafickom zobrazení (nie funkcie programu\!)
+Settings.fontfamily=Rodina písmen (font)
+Settings.fontsize=Veľkosť písma
+Settings.fontchangehint=Font písma sa zmení po reštarte\!
+Settings.ui=Nastavenia UI
+Settings.deletetrash=Vysypať kôš/vymazať záložný priečinok pri vypnutí
+Settings.trakt=Automatické synchronizovanie s Trakt.tv
+Settings.trakt.clearmovies=Odstrániť filmy z Trakt.tv
+Settings.trakt.clearmovies.hint=POZOR\: Toto odstráni všetky vaše filmy a označenie 'Videné' z vášho Trakt.tv profilu. Pokračovať?
+Settings.trakt.cleartvshows=Odstrániť seriály z Trakt.tv
+Settings.trakt.cleartvshows.hint=POZOR\: Toto odstráni všetky vaše seriály a označenie 'Videné' z vášho Trakt.tv profilu. Pokračovať?
 
 # image settings
 Settings.poster=Plagát a FanArt
@@ -247,6 +303,7 @@ Settings.fanarttv.alert=Výstraha\: Fanart.tv neposkytuje plagát
 Settings.moviefilename=<názov filmu>
 Settings.tbn.deprecation=.tbn je neschválená a čoskoro bude odstránená
 Settings.naming.info=Poznámka\: Vyššie uvedené voľby vytvoria súbor s príponou buď .JPG alebo .PNG v závislosti na formáte/type artworku.
+Settings.extraartwork=Povoliť extra Artwork
 Settings.enable.extrathumbs=Povoliť extra náhľady
 Settings.resize.extrathumbs=Zmeniť veľkosť extra náhľadu na (šírka) 
 Settings.enable.extrafanart=Povoliť extra FanArt
@@ -289,7 +346,7 @@ Settings.videofiletypes=Video typy súborov
 Settings.extrafiletypes=Titulky a prídavné typy súborov
 Settings.audiofiletypes=Audio typy súborov
 Settings.sorting=Usporiadanie názvov
-Settings.sorting.info=Vyberte prefixy, ktoré budú mať vplyv na poradie v zozname\nPríklad\: The\n'The Bourne Identity' sa zobrazí ako 'Bourne Identity, The'\nPokiaľ chcete zakázať túto funkciu, vymažte zoznam
+Settings.sorting.info=Vybrať prefixy, ktoré budú mať vplyv na poradie v zozname\nPríklad\: The\n'The Bourne Identity' sa zobrazí ako 'Bourne Identity, The'\nPokiaľ chcete zakázať túto funkciu, vymažte zoznam
 Settings.renamer=Premenovanie
 Settings.renamer.folder=Názov priečinku
 Settings.renamer.file=Názov súboru
@@ -306,8 +363,11 @@ Settings.macaddress=MAC adresa
 Settings.movie.badwords=Nesprávne slová
 Settings.movie.badwords.hint=Nesprávne slová, ktoré budú odstránené z hľadaného názvu filmu
 Settings.runtimefrommediafile=Uprednostniť runtime z MediaInfo
+Settings.trailer.preferred=Použiť preferované nastavenia traileru
+Settings.trailer.source=Zdroj traileru
+Settings.trailer.quality=Kvalita traileru
 
-Settings.movie.renamer.info=Dostupné vzorce\n$T \= Názov\n$O \= Pôvodný názov\n$1 \= Prvé písmeno názvu\n$E \= Názov pre usporiadanie\n$2 \= Prvé písmeno názvu pre usporiadanie\n$Y \= Rok\n$M \= Názov kolekcie filmov (názov pre usporiadanie)\n$N \= Názov kolekcie filmov\n$I \= IMDB číslo\n$C \= Certifikát\n$R \= Rozlíšenie videa\n$A \= Audio kódovanie + kanály\n$V \= Video kódovanie + formát\n$F \= Video formát\n\n{} \= voliteľná náhrada\nnapr.\: {Rok $Y} -> "Rok 2013"ak $Y nie je prázdny\nak $Y je prázdny (alebo nie je vnútri náhrada $x)\ncelý tag je prázdny
+Settings.movie.renamer.info=Dostupné vzorce\n$T \= Názov\n$O \= Pôvodný názov\n$1 \= Prvé písmeno názvu\n$E \= Názov pre usporiadanie\n$2 \= Prvé písmeno názvu pre usporiadanie\n$Y \= Rok\n$M \= Názov kolekcie filmov (názov pre usporiadanie)\n$N \= Názov kolekcie filmov\n$I \= IMDB číslo\n$C \= Certifikát\n$R \= Rozlíšenie videa\n$A \= Audio kódovanie + kanály\n$V \= Video kódovanie + formát\n$F \= Video formát\n$S \= zdroj média (DVD atď.)\n$3 \= 3D značka (3D SBS/TAB)\n\n{} \= voliteľná náhrada\nnapr.\: {Rok $Y} -> "Rok 2013"ak $Y nie je prázdny\nak $Y je prázdny (alebo nie je vnútri náhrada $x)\ncelý tag je prázdny
 Settings.movie.renamer.example=Vyberte vzor pre premenovanie priečinku a súboru.\nAk sú polia prázdne, premenovanie bude preskočené\!
 Settings.movie.renamer.nomovie=pre príklad Je potrebný aspoň jeden film
 Settings.movie.renamer.spacesubstitution=Miesto medzery použiť
@@ -323,11 +383,14 @@ Settings.tvshowseasontofilename=Pridať sezónu do názvu súboru
 Settings.tvshowtofilename=Pridať názov seriálu do názvu súboru
 Settings.tvshowepisodetofilename=Pridať názov epizódy do názvu súboru
 Settings.tvshowseasonfoldername=Názov priečinku sezóny
-Settings.tvshowseasonhint=$1 - Číslo sezóny\n$2 - Číslo sezóny s aspoň dvoma číslicami
+Settings.tvshowseasonhint=$1 - Číslo sezóny\n$2 - Číslo sezóny s aspoň dvoma číslicami\nMôžete vynechať vytvorenie zložky sezóny tým, že necháte toto pole prázdne. Zároveň musíte označiť \\"Pridať sezónu do názvu súboru\\"
 Settings.separator=Oddeľovač
+Settings.separator.hint=Oddeľovač medzi názvom a číslom sezóny/epizódy   
+Settings.tvshowspacereplacement.hint=Nahradiť medzery týmto znakom
 Settings.tvshow.certifactioncountry.hint=Tip\: aktuálne žiaden scraper nepodporuje certifikát z rôznych krajín.\nTheTVDB databáza vždy použije certifikát US\nAniDB neposkytuje certifikát
 
 # tv shows
+tvshow.scraping=Sťahovanie informácií o seriáloch
 tvshow.scrape.newitems=Stiahni informácie nových položiek
 tvshow.scrape.selected=Nájdi a stiahni informácie označených seriálov
 tvshow.scrape.selected.force=Nájdi a stiahni informácie označených seriálov - vynútiť najväčšiu zhodu
@@ -336,6 +399,9 @@ tvshow.scrape.nomatchfound=Pri vyhľadávaní nebol nájdený vhodný seriál
 tvshow.edit=Upraviť označené seriály/epizódy
 tvshow.edit.abortqueue.desc=Prerušiť upravovanie všetkých označených seriálov
 tvshow.remove=Odstrániť označené seriály/epizódy
+tvshow.delete=Vymazať označené seriály/epizódy
+tvshow.delete.hint=Vymazať označené seriály/epizódy z tinyMediaManager a zo zdroja dát
+tvshow.delete.desc=Odstrániť označené seriály/epizódy z tinyMediaManager a zo zdroja dát?\nSúbory budu dočasne presunuté do zložky .deletedByTMM umiestnenej v zdroji dát a vymazané pri ukončení tinyMediaManageru
 tvshow.changeseasonposter=Zmeniť plagát sezóny označených sezón
 tvshow.change=Zmeniť seriál
 tvshow.bulkedit=Hromadná úprava
@@ -348,12 +414,28 @@ tvshow.clearimagecache=Vyčistiť medzipamäť obrázkov pre označené seriály
 tvshow.renamer.failedrename=Nepodarilo sa premenovať epizódu {} - nesprávne číslo epizódy alebo sezóny
 tvshow.renamer.tvshowfolder=Premenovať priečinok seriálov
 tvshow.renamer.tvshowfolder.year=Pridať rok do priečinka seriálov
+tvshow.updatemediainfo=Aktualizovať informácie o médiu označených seriálov/epizód
+tvshow.export=Exportovať označené seriály
+tvshow.synctrakt=Synchronizovať kolekciu seriálov s Trakt.tv
+tvshow.synctrakt.desc=Synchronizovať kolekciu seriálov s Trakt.tv
+tvshow.synctraktwatched=Synchronizovanie označenia 'Videné' s Trakt.tv
+tvshow.synctraktwatched.desc=Synchronizovanie označenia 'Videné' s Trakt.tv
 
 tvshowepisode.scrape=Stiahni metadáta epizódy
 tvshowepisode.clone=klonovať epizódu
 tvshowepisode.remove=Odstrániť epizódu
 tvshowepisode.rewritenfo=Prepísať NFO označených epizód
-tvshowepisode.choose=Vyberte epizódu
+tvshowepisode.choose=Vybrať epizódu
+tvshowepisode.setwatchedflag=Zmeniť označenie 'Videné' pre označené epizódy
+
+trakt.sync=Synchronizovanie dát s Trakt.tv
+trakt.sync.movie=Synchronizovanie kolekcií filmov
+trakt.sync.moviewatched=Synchronizovanie označenia 'Videné' pre film
+trakt.sync.tvshow=Synchronizovanie kolekcií seríálov
+trakt.sync.tvshowwatched=Synchronizovanie označenia 'Videné' pre seriál
+trakt.clear=Čistenie dát Trakt.tv
+trakt.clear.movies=Čistenie filmov Trakt.tv
+trakt.clear.tvshows=Čistenie seriálov Trakt.tv
 
 # metatags
 metatag.actors=Herci
@@ -374,6 +456,7 @@ metatag.director=Réžia
 metatag.episode=Epizóda
 metatag.episodes=Epizódy
 metatag.external=externé
+metatag.extraartwork=Extra artwork
 metatag.filename=Názov súboru
 metatag.files=Súbory
 metatag.format=Formát
@@ -420,7 +503,7 @@ metatag.top250=Top 250
 metatag.tvdb=TheTVDB Id
 metatag.tvshow=Seriál
 metatag.tvshows=Seriály
-metatag.trailer=Ukážka
+metatag.trailer=Trailer
 metatag.url=Url
 metatag.video=Video
 metatag.videocodec=Video kodek
@@ -429,7 +512,7 @@ metatag.writer=Napísal
 metatag.year=Rok
 metatag.mediainformation=Informácie o médiu
 metatag.mediafiles=Súbory
-metatag.trailer=Ukážka
+metatag.trailer=Trailer
 
 mediafiletype.unknown=Neznámy
 mediafiletype.video=Video
@@ -440,9 +523,13 @@ mediafiletype.nfo=NFO
 mediafiletype.poster=Plagát
 mediafiletype.fanart=FanArt
 mediafiletype.banner=Banner
+mediafiletype.clearart=Clearart
+mediafiletype.logo=Logo
+mediafiletype.discart=Disc art
 mediafiletype.thumb=Náhľad
-mediafiletype.trailer=Ukážka
+mediafiletype.trailer=Trailer
 mediafiletype.extrafanart=Extra FanArt
+mediafiletype.extrathumb=Extra náhľad
 mediafiletype.graphic=Grafika
 mediafiletype.movie=Film
 mediafiletype.episode=Epizóda
@@ -494,7 +581,7 @@ message.scrape.metadatamoviefailed=Zlyhalo nastavenie metadát pre film
 message.scrape.metadatatvshowfailed=Nepodarilo sa nastaviť metadáta pre seriál
 message.scrape.movieartworkfailed=Zlyhalo sťahovanie artworku pre film
 message.scrape.tvshowartworkfailed=Nepodarilo sa získať artwork pre seriál
-message.scrape.movietrailerfailed=Zlyhalo sťahovanie ukážky filmu
+message.scrape.movietrailerfailed=Zlyhalo sťahovanie traileru filmu
 message.scrape.threadcrashed=Sťahovanie informácii zlyhalo{} {}
 message.scrape.tvshowepisodefailed=Nepodarilo sa získať metadáta epizódy - vyskúšajte vyhľadať správnu epizódu
 
@@ -505,6 +592,7 @@ message.update.errormoviedir=Zlyhala analýza priečinku filmu
 
 message.database.loadmovies=Nedá sa načítať filmy z databázy
 message.database.loadtvshows=Nedá sa načítať seriály z databázy
+message.database.corrupteddata=V databáze boli nájdené a odstránené poškodené dáta.\nProsím aktualizujte zdroje dát\!
 
 message.config.loadsettingserror=Načítanie nastavení zlyhalo{} {}
 message.config.savesettingserror=Ukladanie nastavení zlyhalo{} {}
