--- a/locale/messages_vi.properties
+++ b/locale/messages_vi.properties
@@ -13,6 +13,7 @@ Button.search=Tìm kiếm
 # Button.edit=Edit
 # Button.register=Register
 # Button.rename=Rename
+# Button.chooseplayer=Choose player
 
 # menuitem.cut=Cut
 # menuitem.copy=Copy
@@ -28,9 +29,9 @@ tmm.moviesets=Phim trường
 tmm.settings=Thiết lập
 
 # menu actions
-tmm.exit=Thoát
+# tmm.exit=Quit
 tmm.exit.runningtasks=Bạn có chắc bạn muốn đóng lại chương trình?\nMột vài tiến trình hiện vẫn đang chạy...
-tmm.exit.confirmation=Thoát khỏi phần xác nhận
+# tmm.exit.confirmation=Quit confirmation
 # tmm.cache=Cache
 # tmm.clearurlcache=clear url cache
 # tmm.clearimagecache=clear image cache
@@ -62,17 +63,31 @@ tmm.searchfield=Tìm kiếm...
 # tmm.update.message=A new update has been found.\nDo you want to update?
 # tmm.registeredto=Registered to\:
 # tmm.registerdonator=Register for donator version
-# tmm.registerdonator.error=There was a problem registering your version
+# tmm.registerdonator.error=There was a problem registering your version.\nRegistering your donation in our system may take a while. Please try again in a few minutes.
 # tmm.registerdonator.success=Thank you for registering to the donator version. Please restart tMM.
-# tmm.registerdonator.hint=Here you can register to the donator version. The donator version will have some special features as a "thank you" for our supporters. Please fill in the name and email address you used when donating.
+# tmm.registerdonator.hint=Here you can register to the donator version. The donator version will have some special features as a "thank you" for our supporters.\n\nPlease fill in the name and email address you used when donating.
 # tmm.registerdonator.thanks=You have already registered to the donator version. Thank you again for donating\!
-# tmm.donatorfunction.hint=This feature is restricted to our donators.
+# tmm.donatorfunction.hint=This feature is restricted to our donators
+# tmm.help=Help
+# tmm.faq=Frequently asked questions
+# tmm.forum=Find help in the tinyMediaManager forum
+# tmm.queued=queued
+# tmm.unknowntitle=Unknown title
+# tmm.problemdetected=Problem detected
+# tmm.uicrash=Whoops. Something unforeseen has happened.\nPlease restart TMM and try again.\nIf it happens again, we would kindly ask you to submit a bugreport.
 
-status.activethreads=các tiến trình đang hoạt động
-# status.queuesize=Queue\:
+# status.activethreads=There are active threads - click for details
+# task.running=Working..
+# task.queued=Waiting..
+# task.cancelled=Cancelled..
+# task.finished=Finished..
+# task.imagedownloads=Downloading images
+# task.download=File download
+# task.othertasks=Performing background tasks
+# task.remaining=tasks remaining
 
 # menu & popup on rightclick
-onlyoneoperation=Chỉ hiển thị một tiến trình vào cùng một thời điểm
+# onlyoneoperation=Only one operation at one time is allowed. The task will be queued
 # update.datasource=Update data sources
 # update.datasource.unavailable=Datasource {} not available - skipping
 # update.datasource.movieinroot=Found file '{}' in a directory containing more than one movie. To get this imported, please activate the 'Allow multiple movies per folder' feature in movie settings (read carefully\!)
@@ -81,8 +96,12 @@ onlyoneoperation=Chỉ hiển thị một tiến trình vào cùng một thời 
 # export.setdestination=Set export destination
 # export.selectdirectory=select export directory
 
+# update.cleanup=Cleanup database
+# update.mediainfo=getting Mediainfo
+
 # edit.discard=Discard changes
 
+# movie.scraping=Scraping movies
 movie.scrape.selected=Tìm kiếm & tải về (các) phim được chọn
 movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn - buộc phần khớp tốt nhất
 # movie.scrape.selected.force.desc=Search & scrape selected movie(s) without user interaction; forces best match
@@ -92,11 +111,14 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 # movie.scrape.metadata.desc=Scrape metadata for selected movie(s)
 # movie.scrape.nomatchfound=No suitable movie found during search
 # movie.scrape.toosimilar=Movie titles are too similar - can't decide which to use
-# movie.scrape.toolowscore=Matching score was too low (<0.75) so we are not taking this result
-# movie.remove=Remove selected movie(s)
+# movie.scrape.toolowscore=Matching score was too low (<{}) so we are not taking this result
+# movie.remove=Remove selected movie(s) (DB)
+# movie.delete=Delete selected movie(s) (DB + file)
+# movie.delete.hint=Delete selected movie(s) from tinyMediaManager DB and your data source\!
+# movie.delete.desc=Delete selected movie(s) from tinyMediaManager DB and the data source?\nThe files will be temporary moved to a folder called .deletedByTMM inside the data source and deleted on exit of tinyMediaManager
 # movie.rename=Rename/cleanup selected movie(s)
 # movie.renamepreview=Rename/cleanup selected movie(s) - dry run
-# movie.renamepreview.hint=Create a preview, which movies have to be renamed
+# movie.renamepreview.hint=<html>Create a preview, which movies have to be renamed<br />This feature is restricted to our donators</html>
 # movie.renamerpreview=Renamer preview
 # movie.updatemediainfo=Update media information of selected movie(s)
 # movie.bulkedit=Bulk editing
@@ -105,6 +127,13 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 # movie.clearimagecache=Clear image cache for selected movie(s)
 # movie.findmissing.all=Find missing movies in all datasources
 # movie.findmissing=Find missing movies
+# movie.assignmovieset=Find movie sets for selected movie(s)
+# movie.assignmovieset.desc=<html>Assign selected movie(s) to their movie sets<br />This feature is restricted to our donators</html>
+# movie.setwatchedflag=Set the watched flag for selected movie(s)
+# movie.synctrakt=Synchronize the movie collection with Trakt.tv
+# movie.synctrakt.desc=Synchronize the movie collection with Trakt.tv
+# movie.synctraktwatched=Synchronize the watched state with Trakt.tv
+# movie.synctraktwatched.desc=Synchronize the watched state with Trakt.tv
 
 # movie.export=Export selected movie(s)
 
@@ -163,6 +192,10 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 # image.choose.poster=Choose poster
 # image.choose.banner=Choose banner
 # image.choose.season=Choose season poster
+# image.choose.logo=Choose logo
+# image.choose.clearart=Choose clearart
+# image.choose.thumb=Choose thumb
+# image.choose.disc=Choose disc art
 # image.extrathumbs.markall=Mark all extrathumbs
 # image.extrathumbs.unmarkall=Unmark all extrathumbs
 # image.extrafanart.markall=Mark all extrafanart
@@ -170,8 +203,11 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 # image.nonefound=no image found
 # image.noneselected=no image selected\!
 # image.seteselected=Set selected image
+# image.download=Downloading image
+# image.download.failed=Could not download image
 # image.download.noid=No ID (imdbId or tmdbId) for searching available
 # image.download.progress=Downloading images
+# image.download.nothingfound=No images found
 # image.poster.size=Poster size
 # image.poster.naming=Poster file naming
 # image.fanart.size=Fanart size
@@ -180,6 +216,10 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 # image.notfound.poster=No poster found
 # image.notfound.banner=No banner found
 # image.notfound.thumb=No thumb found
+# image.notfound.logo=No logo found
+# image.notfound.clearart=No clearart found
+# image.notfound.disc=No disc art found
+# image.showoriginal=Show original image
 
 # genre.add=Add genre
 # genre.remove=Remove genre
@@ -222,7 +262,10 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 # Settings.tvshow=TV Shows
 # Settings.general=General
 # Settings.externaldevices=External devices
+# Settings.externalservices=External services
 # Settings.filetypes=File types
+# Settings.trakttv=Trakt.tv
+# Settings.trakttv.apikey=Trakt.tv API key
 
 # general settings
 # Settings.proxy=Proxy Settings
@@ -238,6 +281,19 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 # Settings.loglevel=Loglevel
 # Settings.language=UI Language
 # Settings.languagehint=The language will be changed after restart\!
+# Settings.shownotifications=Show notifications
+# Settings.mediaplayer.hint=Specify a media player which will be used for playback\r\n(if no one is chosen, the default player will be taken)
+# Settings.fonts.hint=tinyMediaManager has been created with the font "Dialog" size 12.\r\nChanging the font and/or size can cause visual glitches (but not break functionality\!)
+# Settings.fontfamily=Font family
+# Settings.fontsize=Font size
+# Settings.fontchangehint=The font will be changed after restart\!
+# Settings.ui=UI settings
+# Settings.deletetrash=Delete trash/backup folder on exit
+# Settings.trakt=Automatic sync with Trakt.tv
+# Settings.trakt.clearmovies=Remove movies from Trakt.tv
+# Settings.trakt.clearmovies.hint=ATTENTION\: This will remove all your movies and watched states from your Trakt.tv profile. Proceed?
+# Settings.trakt.cleartvshows=Remove TV shows from Trakt.tv
+# Settings.trakt.cleartvshows.hint=ATTENTION\: This will remove all your TV shows and watched states from your Trakt.tv profile. Proceed?
 
 # image settings
 # Settings.poster=Poster and Fanart
@@ -247,6 +303,7 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 # Settings.moviefilename=<movie filename>
 # Settings.tbn.deprecation=.tbn is deprecated and will be removed soon
 # Settings.naming.info=NOTE\: The above options will create a file name with either a .JPG or .PNG extension depending on artwork format/type.
+# Settings.extraartwork=Enable extra artwork
 # Settings.enable.extrathumbs=Enable extrathumbs
 # Settings.resize.extrathumbs=Resize extrathumbs to (width)
 # Settings.enable.extrafanart=Enable extrafanart
@@ -306,8 +363,11 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 # Settings.movie.badwords=Bad words
 # Settings.movie.badwords.hint=Bad words, which will be removed from\r\nthe detected movie name
 # Settings.runtimefrommediafile=Prefer runtime from MediaInfo
+# Settings.trailer.preferred=Use preferred trailer settings
+# Settings.trailer.source=Trailer source
+# Settings.trailer.quality=Trailer quality
 
-# Settings.movie.renamer.info=Available pattern\:\r\n$T \= Title\r\n$O \= OriginalTitle\r\n$1 \= first letter of the title\r\n$E \= Sort title\r\n$2 \= first letter of sort title\r\n$Y \= Year\r\n$M \= Movieset title (sort title)\r\n$N \= Movieset title\r\n$I \= IMDB number\r\n$C \= Certification\r\n$R \= Video resolution\r\n$A \= audio code + channels\r\n$V \= video code + format\r\n$F \= video format\r\n\r\n{} \= optional replacement\r\n eg\: {Year $Y} -> "Year 2013" if $Y is not empty\r\n if $Y is empty (or no $x replacement inside)\r\n the complete tag is empty
+# Settings.movie.renamer.info=Available pattern\:\r\n$T \= Title\r\n$O \= OriginalTitle\r\n$1 \= first letter of the title\r\n$E \= Sort title\r\n$2 \= first letter of sort title\r\n$Y \= Year\r\n$M \= Movieset title (sort title)\r\n$N \= Movieset title\r\n$I \= IMDB number\r\n$C \= Certification\r\n$R \= Video resolution\r\n$A \= audio code + channels\r\n$V \= video code + format\r\n$F \= video format\r\n$S \= media source (DVD etc)\r\n$3 \= 3D tag (3D SBS/TAB)\r\n\r\n{} \= optional replacement\r\n eg\: {Year $Y} -> "Year 2013" if $Y is not empty\r\n if $Y is empty (or no $x replacement inside)\r\n the complete tag is empty
 # Settings.movie.renamer.example=Choose a folder and file renaming pattern.\nIf fields are empty, the renaming will be skipped\!
 # Settings.movie.renamer.nomovie=at least one movie is needed for the example
 # Settings.movie.renamer.spacesubstitution=Replace spaces with
@@ -323,11 +383,14 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 # Settings.tvshowtofilename=add TV show name to filename
 # Settings.tvshowepisodetofilename=add episode title to filename
 # Settings.tvshowseasonfoldername=season folder name
-# Settings.tvshowseasonhint=$1 - Season number\n$2 - Season number with at least 2 digits
+# Settings.tvshowseasonhint=$1 - Season number\n$2 - Season number with at least 2 digits\nYou can omit creating the season folder by leaving this field blank.\nBut to use this, you have to check \\"add season to filename\\"
 # Settings.separator=Separator
+# Settings.separator.hint=Separator between title and season/episode number
+# Settings.tvshowspacereplacement.hint=Replace spaces in title with this character
 # Settings.tvshow.certifactioncountry.hint=Hint\: at the moment none of the scraper supports certifications from different countries. \r\nThe TV Database will always return US certifications\r\nAniDB does not provide certifications
 
 # tv shows
+# tvshow.scraping=Scraping TV shows
 # tvshow.scrape.newitems=Scrape new items
 # tvshow.scrape.selected=Search & scrape selected TV show(s)
 # tvshow.scrape.selected.force=Search & scrape selected TV show(s) - force best match
@@ -336,6 +399,9 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 # tvshow.edit=Edit selected TV show(s)/episode(s)
 # tvshow.edit.abortqueue.desc=Abort editing all selected TV shows
 # tvshow.remove=Remove selected TV show(s)/episode(s)
+# tvshow.delete=Delete selected TV show(s)/episode(s)
+# tvshow.delete.hint=Delete selected TV show(s)/episode(s) from tinyMediaManager and the data source
+# tvshow.delete.desc=Delete selected TV show(s)/episode(s) from tinyMediaManager and the data source?\nThe files will be temporary moved to a folder called .deletedByTMM inside the data source and deleted on exit of tinyMediaManager
 # tvshow.changeseasonposter=Change season poster of selected season(s)
 # tvshow.change=Change TV show
 # tvshow.bulkedit=Bulk editing
@@ -348,12 +414,28 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 # tvshow.renamer.failedrename=Failed to rename episode {} - invalid season and/or episode number
 # tvshow.renamer.tvshowfolder=Rename TV show folder
 # tvshow.renamer.tvshowfolder.year=Add year to the TV show folder
+# tvshow.updatemediainfo=Update media information of selected TV shows(s)/episodes(s)
+# tvshow.export=Export selected TV show(s)
+# tvshow.synctrakt=Synchronize the TV show collection with Trakt.tv
+# tvshow.synctrakt.desc=Synchronize the TV show collection with Trakt.tv
+# tvshow.synctraktwatched=Synchronize the watched state with Trakt.tv
+# tvshow.synctraktwatched.desc=Synchronize the watched state with Trakt.tv
 
 # tvshowepisode.scrape=Scrape episode metadata
 # tvshowepisode.clone=Clone episode
 # tvshowepisode.remove=Remove episode
 # tvshowepisode.rewritenfo=Rewrite NFO for selected episode(s)
 # tvshowepisode.choose=Choose an episode
+# tvshowepisode.setwatchedflag=Set the watched flag for selected episode(s)
+
+# trakt.sync=Sync Trakt.tv data
+# trakt.sync.movie=Syncing movie collection
+# trakt.sync.moviewatched=Syncing movie watched state
+# trakt.sync.tvshow=Syncing TV show collection
+# trakt.sync.tvshowwatched=Syncing TV show watched state
+# trakt.clear=Clearing Trakt.tv data
+# trakt.clear.movies=Clearing Trakt.tv movie(s)
+# trakt.clear.tvshows=Clearing Trakt.tv TV show(s)
 
 # metatags
 # metatag.actors=Actors
@@ -374,6 +456,7 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 # metatag.episode=Episode
 # metatag.episodes=Episodes
 # metatag.external=external
+# metatag.extraartwork=Extra artwork
 # metatag.filename=Filename
 # metatag.files=Files
 # metatag.format=Format
@@ -440,9 +523,13 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 # mediafiletype.poster=Poster
 # mediafiletype.fanart=Fanart
 # mediafiletype.banner=Banner
+# mediafiletype.clearart=Clearart
+# mediafiletype.logo=Logo
+# mediafiletype.discart=Disc art
 # mediafiletype.thumb=Thumb
 # mediafiletype.trailer=Trailer
 # mediafiletype.extrafanart=Extrafanart
+# mediafiletype.extrathumb=Extrathumb
 # mediafiletype.graphic=Graphic
 # mediafiletype.movie=Movie
 # mediafiletype.episode=Episode
@@ -505,6 +592,7 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 
 # message.database.loadmovies=Could not load movies from database
 # message.database.loadtvshows=Could not load tv shows from database
+# message.database.corrupteddata=Corrupted data has been found and removed from your database. Please update your data sources\!
 
 # message.config.loadsettingserror=Loading settings failed{} {}
 # message.config.savesettingserror=Saving settings failed{} {}
