--- a/locale/messages_cs.properties
+++ b/locale/messages_cs.properties
@@ -13,6 +13,7 @@ Button.scrape=Stáhni data
 Button.edit=Editovat
 Button.register=Registrovat
 Button.rename=Přejmenovat
+Button.chooseplayer=Vyber přehrávač
 
 menuitem.cut=Stříh
 menuitem.copy=Kopíruj
@@ -62,17 +63,31 @@ tmm.update.title=zkontroluj update
 tmm.update.message=Byl nalezen nový update. Updatovat ?
 tmm.registeredto=Registrováno na\:
 tmm.registerdonator=Registrovat pro verzi dárců
-tmm.registerdonator.error=Problém s registrací vaší verze.
+tmm.registerdonator.error=Při registraci vaší verze došlo k problému.\nRegistrace vašeho daru v našem systému může chvíli trvat. Zkuste to prosím za několik minut.
 tmm.registerdonator.success=Díky za registraci verze pro dárce. Restartujte prosím tMM.
-tmm.registerdonator.hint=Zde si můžete zaregistrovat verzi pro dárce. Dárcovský verze bude jako poděkování pro naše přispěvatele obsahovat speciální vlastnosti. Vyplňte prosím jméno a emailovou adresu, kterou jste použili při odeslání daru.
+tmm.registerdonator.hint=Zde si můžete zaregistrovat verzi pro dárce. Dárcovská verze bude jako poděkování pro naše přispěvatele obsahovat některé speciální vlastnosti. \n\nVyplňte prosím jméno a emailovou adresu, kterou jste použili při odeslání daru.
 tmm.registerdonator.thanks=Již máte zaregistrovanou verzi pro dárce. Znovu děkujeme za dar.
 tmm.donatorfunction.hint=Tato vlastnost je dostupná pouze pro dárce.
+tmm.help=Pomoc
+tmm.faq=Často kladené otázky
+tmm.forum=Najdi pomoc na fóru tinyMediaManageru
+tmm.queued=Ve frontě
+tmm.unknowntitle=Neznámy titul
+tmm.problemdetected=Něco je špatně.
+tmm.uicrash=Ale ne. Stalo se něco co jsme nepředpokládali.\nRestartujte prosím program a zkuste to znovu.\nJestliže se problém objeví i pak, pošlete nám prosím hlášení o chybě.
 
-status.activethreads=Aktivní vlákna
-status.queuesize=Fronta
+status.activethreads=Některá vlákna běží - klikněte pro detail
+task.running=Pracuji ..
+task.queued=Čekám ..
+task.cancelled=Zrušeno ..
+task.finished=Dokončeno..
+task.imagedownloads=Nahrávám obrázky
+task.download=Stáhnutí souboru
+task.othertasks=Vykonávám úlohy na pozadí
+task.remaining=zbývající úlohy
 
 # menu & popup on rightclick
-onlyoneoperation=V jednom okamžiku je dovolena pouze jedna operace.
+onlyoneoperation=Může probíhat pouze jedna operace. Úloha bude zařazena do fronty.
 update.datasource=Obnov zdroj dat
 update.datasource.unavailable=Zdroj dat {} není k dispozici - přeskakuji
 update.datasource.movieinroot=Nlezen soubor '{}' v adresáři s více než jedním filmem. Aby se importoval aktivujte prosím 'Dovolit více filmů na adresář'  vlastnost v  nastavení filmu (čtěte pečlivě\!)
@@ -81,8 +96,12 @@ export.detail=Šablona obsahuje podrobnou stránku
 export.setdestination=Nastav místo pro export
 export.selectdirectory=vyber adresář pro export
 
+update.cleanup=Vyčištění databáze
+update.mediainfo=získávám Mediainfo
+
 edit.discard=Zruš změny
 
+movie.scraping=Stahuji informace o filmech
 movie.scrape.selected=Najdi  & stáhni informace k označeným filmům
 movie.scrape.selected.force=Najdi  & stáhni informace k označeným filmům - vynuť nejlepší shodu
 movie.scrape.selected.force.desc=Najdi  & stáhni informace k označeným filmům bez zásahu uživatele\n; vynuť nejlepší shodu
@@ -92,11 +111,14 @@ movie.scrape.metadata=Stáhni metadata pro označené filmy
 movie.scrape.metadata.desc=Stáhni metadata pro označené filmy
 movie.scrape.nomatchfound=Během hledání vhodný film nenalezen
 movie.scrape.toosimilar=Názvy filmů jsou příliš podobné - nemohu se rozhodnout, který použít
-movie.scrape.toolowscore=Kriterium shody je příliš nízké (<0.75) tento výsledek nebude zohledněn.
-movie.remove=Smaž označené filmy
+movie.scrape.toolowscore=Kriterium shody je příliš nízké (<{}) tento výsledek nebude zohledněn.
+movie.remove=Smaž označené film(y) (DB)
+movie.delete=Vymaž vybraný film(y) (DB + soubor)
+movie.delete.hint=Vymaž vybraný film(y) z tinyMediaManageru DB a z vašich zdrojů dat
+movie.delete.desc=Smazat vybraný film(y) z tinyMediaManageru DB a ze zdrojů dat?\nSoubory budou přechodně umístěny do adresáře deletedByTMM uvnitř zdrojů dat a vymazány po ukončení tinyMediaManageru.
 movie.rename=Přejmenuj/smaž označené filmy
 movie.renamepreview=Přejmenuj/smaž označené filmy - testovací běh
-movie.renamepreview.hint=Ukaž náhled filmů k přejmenování
+movie.renamepreview.hint=<html>Ukaž náhled filmů k přejmenování<br />toto rozšíření je dostupné pouze pro dárce</html>
 movie.renamerpreview=Náhled přejmenování
 movie.updatemediainfo=Obnov informace o mediu pro označené filmy
 movie.bulkedit=Hromadná editace
@@ -105,6 +127,13 @@ movie.rewritenfo=Přepiš NFO pro vybrané filmy
 movie.clearimagecache=Vyčisti obrázkovou cache pro vybrané filmy
 movie.findmissing.all=Najdi chybějící filmy pomocí všech zdrojů dat.
 movie.findmissing=Najdi chybějící filmy.
+movie.assignmovieset=Najdi sady pro vybrané filmy
+movie.assignmovieset.desc=<html>Přiřaď vybrané filmy do sad<br />Tato funkce je dostupná pouze pro dárce</html>
+movie.setwatchedflag=Natav příznak shlédnuto pro vybraný film(y)
+movie.synctrakt=Synchronizuj sbírku filmů s Trakt.tv
+movie.synctrakt.desc=Synchronizuj sbírku filmů s Trakt.tv
+movie.synctraktwatched=Synchronizuj příznak shlédnutí s Trakt.tv
+movie.synctraktwatched.desc=Synchronizuj příznak shlédnutí s Trakt.tv
 
 movie.export=Exportuj označené filmy
 
@@ -163,6 +192,10 @@ image.choose.fanart=Vyber fanart
 image.choose.poster=Vyber plakát
 image.choose.banner=Vyber banner
 image.choose.season=Vyber plakát pro sezónu
+image.choose.logo=Vyber logo
+image.choose.clearart=Vyber clearart
+image.choose.thumb=Vyber náhled
+image.choose.disc=Vyber grafiku pro disk
 image.extrathumbs.markall=Označ všechny extranáhledy
 image.extrathumbs.unmarkall=Odznač všechny extranáhledy
 image.extrafanart.markall=Označ všechny extrafanarty
@@ -170,8 +203,11 @@ image.extrafanart.unmarkall=Odznač všechny extrafanarty
 image.nonefound=nenalezen žádný obrázek
 image.noneselected=není vybrán žádný obrázek
 image.seteselected=Použij vybraný obrázek
+image.download=Nahrávám obrázek
+image.download.failed=Nemohu nahrát obrázek
 image.download.noid=Není dostubpné žádné ID ((imdbId or tmdbId) pro hledání
 image.download.progress=Nahrávám obrázky
+image.download.nothingfound=Nenalezeny žádné obrázky.
 image.poster.size=Velikost plakátu
 image.poster.naming=Pojmenování souboru s plakátem
 image.fanart.size=Velikost fanartu
@@ -180,6 +216,10 @@ image.notfound.fanart=Nenalezen žádný fanart
 image.notfound.poster=Nenalezen žádný plakát
 image.notfound.banner=Nenalezen žádný banner
 image.notfound.thumb=Nenalezen žádný náhled
+image.notfound.logo=Logo nenalezeno
+image.notfound.clearart=Clearart nenalezen
+image.notfound.disc=Grafika pro disk nenalezena
+image.showoriginal=Zobraz originální obrázek
 
 genre.add=Přidat žánr
 genre.remove=Odstanit žánr
@@ -222,7 +262,10 @@ Settings.images=Obrázky
 Settings.tvshow=Seriály
 Settings.general=Obecné
 Settings.externaldevices=Externí zařízení
+Settings.externalservices=Externí služby
 Settings.filetypes=Typy souborů
+Settings.trakttv=Trakt.tv
+Settings.trakttv.apikey=Trakt.tv API key
 
 # general settings
 Settings.proxy=Nastavení proxy
@@ -238,6 +281,19 @@ Settings.imagecachebackground=Vytvoř obrázkovou cache automaticky na pozadí
 Settings.loglevel=Úroveň logování zpráv
 Settings.language=Jazyk menu
 Settings.languagehint=Jazyk bude změněn po restartu
+Settings.shownotifications=Ukaž oznámení
+Settings.mediaplayer.hint=Vyber program pro přehrávání videa\n(jinak bude použit defaultní přehrávač)
+Settings.fonts.hint=tinyMediaManager byl vytvořen   fontem  "Dialog" velikosti 12.\nZměna fontu samotného nebo jeho velikosti může způsobit nesrovnalosti v zobrazení  (ale nikdy nebude\nmít vliv na funkce programu\!)
+Settings.fontfamily=Druh fontu
+Settings.fontsize=Velikost fontu
+Settings.fontchangehint=Font bude změněn pro restartu aplikace\!
+Settings.ui=Nastavení uživatelského rozhraní
+Settings.deletetrash=Smaž trash/backup adresář po ukončení.
+Settings.trakt=Automatická synchronizace s Trakt.tv
+Settings.trakt.clearmovies=Odstraň filmy z Trakt.tv
+Settings.trakt.clearmovies.hint=POZOR\: Dojde k vymazání všech filmů a jejich stavů shlédnutí z vašeho profilu na Trakt.tv. Pokračovat?
+Settings.trakt.cleartvshows=Odstraň seriály z Trakt.tv
+Settings.trakt.cleartvshows.hint=POZOR\: Dojde k vymazání všech seriálů a jejich stavů shlédnutí z vašeho profilu na Trakt.tv. Pokračovat?
 
 # image settings
 Settings.poster=Plakát a fanart
@@ -247,6 +303,7 @@ Settings.fanarttv.alert=Pozor\: Fanart.tv neposkytuje plakát
 Settings.moviefilename=<jméno souboru s filmem>
 Settings.tbn.deprecation=.tbn je zastaralá a brzy bude odstraněna
 Settings.naming.info=Pozn\: Výše uvedená možnost vytvoří jméno jouboru s . JPG nebo .PNG příponou v závislosti na formátu artworku
+Settings.extraartwork=Povol extra artwork
 Settings.enable.extrathumbs=Povol extranáhledy
 Settings.resize.extrathumbs=Změň velikost extranáhledu to (šířka)
 Settings.enable.extrafanart=Povol extrafanart
@@ -306,8 +363,11 @@ Settings.macaddress=MAC adresa
 Settings.movie.badwords=Špatná slova
 Settings.movie.badwords.hint=Špatná slova, který budou odstraněna\nz nalezeného názvu filmu
 Settings.runtimefrommediafile=Preferuj runtime z MediaInfo
+Settings.trailer.preferred=Použij preferované nastavení pro trailer
+Settings.trailer.source=Zdroju traileru
+Settings.trailer.quality=Kvalita traileru
 
-Settings.movie.renamer.info=Možné vzory\:\n$T \= Název\n$O \= Původní název\n$1 \= první písmeno názvu\n$E \= Název pro třídění\n$2 \= První písmeno názvu pro třídění\n$Y \= Rok\n$M \= Název sbírky (pro třídění)\n$N \= Název sbírky\n$I \= IMDB number\n$C \= Certifikace↩⏎\n$R \= Rozlišení videa\n$A \= audio codec + kanály\n$V \= video codec + formát\n$F \= video formát\n\n{} \= volitelné nahrazení↩⏎\ntzn\: {Year $Y} -> "Year 2013" jestliže $Y není prázdný↩⏎\nJestliže je $Y prázdný (nebo není zádné $x nahrazení uvnitř)↩⏎\ncelý tag je prázdný
+Settings.movie.renamer.info=Možné vzory\:\n$T \= Název\n$O \= Původní název\n$1 \= první písmeno názvu\n$E \= Název pro třídění\n$2 \= První písmeno názvu pro třídění\n$Y \= Rok\n$M \= Název sbírky (pro třídění)\n$N \= Název sbírky\n$I \= IMDB number\n$C \= Certifikace\n$R \= Rozlišení videa\n$A \= audio codec + kanály\n$V \= video codec + formát\n$F \= video formát\n$S \= medium zdroje (DVD etc)\n$3 \= 3D tag (3D SBS/TAB)\n\n{} \= volitelné nahrazení\ntzn\: {Year $Y} -> "Year 2013" jestliže $Y není prázdný\nJestliže je $Y prázdný (nebo není zádné $x nahrazení uvnitř)\ncelý tag je prázdný
 Settings.movie.renamer.example=Vyber vzor pro přejmenování složek a souboru.\nJestliže jsou pole prázdná, přejmenová bude přeskočeno\!
 Settings.movie.renamer.nomovie=pro příklad je potřeba alespoň jeden film
 Settings.movie.renamer.spacesubstitution=Nahraď mezery
@@ -323,11 +383,14 @@ Settings.tvshowseasontofilename=přidej sezónu do názvu souboru
 Settings.tvshowtofilename=přidej název seriálu do názvu souboru
 Settings.tvshowepisodetofilename=přidej název epizody do názvu souboru
 Settings.tvshowseasonfoldername=název složky sezóny
-Settings.tvshowseasonhint=$1 - číslo sezony\n$2 - číslo sezony s alespoň dvěmi číslicemi
+Settings.tvshowseasonhint=$1 - Pořadí sezóny\n$2 - Pořadí sezóny na alespoň 2 číslice\nMužete vynechat vytvoření adresáře pro sezónu nevyplněním tohoto pole.\nAle při použití, musíte zkontrolovat \\"přidej sezónu do názvu souboru\\"
 Settings.separator=Oddělovač
+Settings.separator.hint=Oddělovač mezi názvem číslem sezóny/epizody
+Settings.tvshowspacereplacement.hint=Nahraď mezery v názvu těmito znaky
 Settings.tvshow.certifactioncountry.hint=Nápověda\: v současně době nepodporuje žádný scraper certifikaci více států.\nThe TV Database vždy vrací US certifikaci.\nAniDB neposkytuje certifikaci.
 
 # tv shows
+tvshow.scraping=Stahuji informace o seriálech
 tvshow.scrape.newitems=Stáhni data pro nové položky
 tvshow.scrape.selected=Najdi & stáhni data pro vybrané seriály
 tvshow.scrape.selected.force=Najdi & stáhni data pro vybrané seriály - nejlepší shoda
@@ -336,6 +399,9 @@ tvshow.scrape.nomatchfound=Běhěm hledání vhodný seriál nenalezen
 tvshow.edit=Edituj vybrané seriály/epizody
 tvshow.edit.abortqueue.desc=Ukonči editaci vybraných seriálů
 tvshow.remove=Odstraň vybrané seriály/epizody
+tvshow.delete=Smaž vybraný TV seriál(y), epizodu(y)
+tvshow.delete.hint=Smaž vybraný TV seriál(y), epizodu(y) z tinyMediaManageru a ze zdrojů dat.
+tvshow.delete.desc=Smazat vybraný TV seriál(y), epizodu(y) z tinyMediaManageru a ze zdrojů dat?\nSoubory budou přechodně umístěny do adresáře deletedByTMM uvnitř zdrojů dat a vymazány po ukončení tinyMediaManageru.
 tvshow.changeseasonposter=Změň plakát sezóny pro vybrané položky
 tvshow.change=Změň seriál
 tvshow.bulkedit=Editace základních údajů
@@ -348,12 +414,28 @@ tvshow.clearimagecache=Vyčisti obrázkovou cache pro vybrané Seriály/Epizody
 tvshow.renamer.failedrename=Chyba při přejmenování epizody {} -neplatné číslo sezoný či epizody
 tvshow.renamer.tvshowfolder=Přejmenuj složku seriálů
 tvshow.renamer.tvshowfolder.year=Přidej rok k názvu složky seriálů
+tvshow.updatemediainfo=Aktualizovat informace o mediu pro vybraný Seriál(y)/Epizodu(y)
+tvshow.export=Exportuj vybraný seriál(y)
+tvshow.synctrakt=Synchronizuj sbírku seriálů s Trakt.tv
+tvshow.synctrakt.desc=Synchronizuj sbírku seriálů s Trakt.tv
+tvshow.synctraktwatched=Synchronizuj příznak shlédnutí s Trakt.tv
+tvshow.synctraktwatched.desc=Synchronizuj příznak shlédnutí s Trakt.tv
 
 tvshowepisode.scrape=Stáhni data pro epizodu
 tvshowepisode.clone=Klonuj epizodu
 tvshowepisode.remove=Odstraň epizodu
 tvshowepisode.rewritenfo=Přepiš NFO pro vybrané epizody
 tvshowepisode.choose=Vyber epizodu
+tvshowepisode.setwatchedflag=Natav příznak shlédnuto pro vybranou epizodu(y)
+
+trakt.sync=Synchronizuj s Trakt.tv
+trakt.sync.movie=Synchronizuj sbírku filmů
+trakt.sync.moviewatched=Synchronizuj shlédnuté filmy
+trakt.sync.tvshow=Synchronizuj sbírku seriálů
+trakt.sync.tvshowwatched=Synchronizuj shlédnuté seriály
+trakt.clear=Mažu Trakt.tv data
+trakt.clear.movies=Mažu Trakt.tv film(y)
+trakt.clear.tvshows=Mažu Trakt.tv seriál(y)
 
 # metatags
 metatag.actors=Herci
@@ -374,6 +456,7 @@ metatag.director=Režisér
 metatag.episode=Epizoda
 metatag.episodes=Epizody
 metatag.external=vnější
+metatag.extraartwork=Extra artwork
 metatag.filename=Jméno souboru
 metatag.files=Soubory
 metatag.format=Formát
@@ -440,9 +523,13 @@ mediafiletype.nfo=NFO
 mediafiletype.poster=Plakát
 mediafiletype.fanart=Fanart
 mediafiletype.banner=Banner
+mediafiletype.clearart=Clearart
+mediafiletype.logo=Logo
+mediafiletype.discart=Grafika pro disk
 mediafiletype.thumb=Náhled
 mediafiletype.trailer=Trailer
 mediafiletype.extrafanart=Extrafanart
+mediafiletype.extrathumb=Extranáhled
 mediafiletype.graphic=Grafika
 mediafiletype.movie=Film
 mediafiletype.episode=Epizoda
@@ -505,6 +592,7 @@ message.update.errormoviedir=Selhalo parsování adresáře pro film
 
 message.database.loadmovies=Nemohu nahrát film z databáze
 message.database.loadtvshows=Nemohu nahrát seriál z databáze
+message.database.corrupteddata=Ve vaší databázi byla nalezena a odstraněna poškozená data.\nObnovte prosím informace z datových zdrojů.
 
 message.config.loadsettingserror=Selhalo nahrání nastaveníelh
 message.config.savesettingserror=Selhalo uložení nastavení
